@@ -1,6 +1,9 @@
 package de.tum.in.www1.artemis.repository;
 
-import static de.tum.in.www1.artemis.config.Constants.*;
+import static de.tum.in.www1.artemis.config.Constants.PROFILE_CORE;
+import static de.tum.in.www1.artemis.config.Constants.SHORT_NAME_PATTERN;
+import static de.tum.in.www1.artemis.config.Constants.TITLE_NAME_PATTERN;
+import static de.tum.in.www1.artemis.repository.ProgrammingExerciseRepository.ProgrammingExerciseFetchOptions;
 import static org.springframework.data.jpa.repository.EntityGraph.EntityGraphType.LOAD;
 
 import java.time.ZonedDateTime;
@@ -10,24 +13,26 @@ import java.util.Set;
 import java.util.regex.Matcher;
 
 import jakarta.annotation.Nullable;
-import jakarta.persistence.criteria.Fetch;
-import jakarta.persistence.criteria.JoinType;
 import jakarta.validation.constraints.NotNull;
 
 import org.hibernate.Hibernate;
 import org.springframework.context.annotation.Profile;
-import org.springframework.data.jpa.domain.Specification;
 import org.springframework.data.jpa.repository.EntityGraph;
-import org.springframework.data.jpa.repository.JpaRepository;
-import org.springframework.data.jpa.repository.JpaSpecificationExecutor;
 import org.springframework.data.jpa.repository.Query;
 import org.springframework.data.repository.query.Param;
 import org.springframework.stereotype.Repository;
 
-import de.tum.in.www1.artemis.domain.*;
+import de.tum.in.www1.artemis.domain.Course;
+import de.tum.in.www1.artemis.domain.Exercise_;
+import de.tum.in.www1.artemis.domain.ProgrammingExercise;
+import de.tum.in.www1.artemis.domain.ProgrammingExercise_;
 import de.tum.in.www1.artemis.domain.assessment.dashboard.ExerciseMapEntry;
-import de.tum.in.www1.artemis.domain.enumeration.ProgrammingLanguage;
-import de.tum.in.www1.artemis.domain.participation.*;
+import de.tum.in.www1.artemis.domain.participation.ProgrammingExerciseParticipation;
+import de.tum.in.www1.artemis.domain.participation.ProgrammingExerciseStudentParticipation;
+import de.tum.in.www1.artemis.domain.participation.SolutionProgrammingExerciseParticipation;
+import de.tum.in.www1.artemis.domain.participation.TemplateProgrammingExerciseParticipation;
+import de.tum.in.www1.artemis.repository.base.DynamicSpecificationRepository;
+import de.tum.in.www1.artemis.repository.base.FetchOptions;
 import de.tum.in.www1.artemis.web.rest.errors.BadRequestAlertException;
 import de.tum.in.www1.artemis.web.rest.errors.EntityNotFoundException;
 
@@ -36,12 +41,7 @@ import de.tum.in.www1.artemis.web.rest.errors.EntityNotFoundException;
  */
 @Profile(PROFILE_CORE)
 @Repository
-public interface ProgrammingExerciseRepository extends JpaRepository<ProgrammingExercise, Long>, JpaSpecificationExecutor<ProgrammingExercise> {
-
-    default ProgrammingExercise findOneByIdElseThrow(final Specification<ProgrammingExercise> specification, long exerciseId) {
-        final Specification<ProgrammingExercise> hasIdSpec = (root, query, criteriaBuilder) -> criteriaBuilder.equal(root.get(DomainObject_.ID), exerciseId);
-        return findOne(specification.and(hasIdSpec)).orElseThrow(() -> new EntityNotFoundException("Programming Exercise", exerciseId));
-    }
+public interface ProgrammingExerciseRepository extends DynamicSpecificationRepository<ProgrammingExercise, Long, ProgrammingExerciseFetchOptions> {
 
     /**
      * Does a max join on the result table for each participation by result id (the newer the result id, the newer the result).
@@ -119,11 +119,11 @@ public interface ProgrammingExerciseRepository extends JpaRepository<Programming
         if (exercises.size() != 1) {
             throw new EntityNotFoundException("No exercise or multiple exercises found for the given project key: " + projectKey);
         }
-        return exercises.get(0);
+        return exercises.getFirst();
     }
 
     /**
-     * Get a programmingExercise with template and solution participation, each with the latest result and feedbacks.
+     * Get a programmingExercise with template participation, each with the latest result and feedbacks.
      * NOTICE: this query is quite expensive because it loads all feedback and test cases, and it includes sub queries to retrieve the latest result
      * IMPORTANT: you should generally avoid using this query except you really need all information!!
      *
@@ -134,20 +134,35 @@ public interface ProgrammingExerciseRepository extends JpaRepository<Programming
             SELECT DISTINCT pe
             FROM ProgrammingExercise pe
                 LEFT JOIN FETCH pe.templateParticipation tp
-                LEFT JOIN FETCH pe.solutionParticipation sp
                 LEFT JOIN FETCH tp.results AS tpr
-                LEFT JOIN FETCH sp.results AS spr
                 LEFT JOIN FETCH tpr.feedbacks tf
-                LEFT JOIN FETCH spr.feedbacks sf
                 LEFT JOIN FETCH tf.testCase
-                LEFT JOIN FETCH sf.testCase
                 LEFT JOIN FETCH tpr.submission
-                LEFT JOIN FETCH spr.submission
             WHERE pe.id = :exerciseId
                 AND (tpr.id = (SELECT MAX(re1.id) FROM tp.results re1) OR tpr.id IS NULL)
+            """)
+    Optional<ProgrammingExercise> findWithTemplateParticipationLatestResultFeedbackTestCasesById(@Param("exerciseId") long exerciseId);
+
+    /**
+     * Get a programmingExercise with solution participation, each with the latest result and feedbacks.
+     * NOTICE: this query is quite expensive because it loads all feedback and test cases, and it includes sub queries to retrieve the latest result
+     * IMPORTANT: you should generally avoid using this query except you really need all information!!
+     *
+     * @param exerciseId the id of the exercise that should be fetched.
+     * @return the exercise with the given ID, if found.
+     */
+    @Query("""
+            SELECT DISTINCT pe
+            FROM ProgrammingExercise pe
+                LEFT JOIN FETCH pe.solutionParticipation sp
+                LEFT JOIN FETCH sp.results AS spr
+                LEFT JOIN FETCH spr.feedbacks sf
+                LEFT JOIN FETCH sf.testCase
+                LEFT JOIN FETCH spr.submission
+            WHERE pe.id = :exerciseId
                 AND (spr.id = (SELECT MAX(re2.id) FROM sp.results re2) OR spr.id IS NULL)
             """)
-    Optional<ProgrammingExercise> findWithTemplateAndSolutionParticipationLatestResultFeedbackTestCasesById(@Param("exerciseId") long exerciseId);
+    Optional<ProgrammingExercise> findWithSolutionParticipationLatestResultFeedbackTestCasesById(@Param("exerciseId") long exerciseId);
 
     /**
      * Get all programming exercises that need to be scheduled: Those must satisfy one of the following requirements:
@@ -215,16 +230,6 @@ public interface ProgrammingExerciseRepository extends JpaRepository<Programming
     @Query("""
             SELECT DISTINCT pe
             FROM ProgrammingExercise pe
-                LEFT JOIN FETCH pe.studentParticipations pep
-                LEFT JOIN FETCH pep.submissions s
-            WHERE s.type <> de.tum.in.www1.artemis.domain.enumeration.SubmissionType.ILLEGAL
-                OR s.type IS NULL
-            """)
-    List<ProgrammingExercise> findAllWithEagerParticipationsAndLegalSubmissions();
-
-    @Query("""
-            SELECT DISTINCT pe
-            FROM ProgrammingExercise pe
                 LEFT JOIN FETCH pe.templateParticipation
                 LEFT JOIN FETCH pe.solutionParticipation
             WHERE pe.id = :exerciseId
@@ -253,17 +258,24 @@ public interface ProgrammingExerciseRepository extends JpaRepository<Programming
     @Query("""
             SELECT pe
             FROM ProgrammingExercise pe
-                LEFT JOIN pe.studentParticipations pep
-            WHERE pep.id = :participationId
-                OR pe.templateParticipation.id = :participationId
-                OR pe.solutionParticipation.id = :participationId
+                LEFT JOIN pe.studentParticipations spep
+            WHERE spep.id = :participationId
             """)
-    Optional<ProgrammingExercise> findByParticipationId(@Param("participationId") long participationId);
+    Optional<ProgrammingExercise> findByStudentParticipationId(@Param("participationId") long participationId);
 
-    default ProgrammingExercise findByParticipationIdOrElseThrow(long participationId) throws EntityNotFoundException {
-        return findByParticipationId(participationId)
-                .orElseThrow(() -> new EntityNotFoundException("Programming exercise for participation with id " + participationId + " does not exist"));
-    }
+    @Query("""
+            SELECT pe
+            FROM ProgrammingExercise pe
+            WHERE pe.templateParticipation.id = :participationId
+            """)
+    Optional<ProgrammingExercise> findByTemplateParticipationId(@Param("participationId") long participationId);
+
+    @Query("""
+            SELECT pe
+            FROM ProgrammingExercise pe
+            WHERE pe.solutionParticipation.id = :participationId
+            """)
+    Optional<ProgrammingExercise> findBySolutionParticipationId(@Param("participationId") long participationId);
 
     @Query("""
             SELECT pe
@@ -318,7 +330,7 @@ public interface ProgrammingExerciseRepository extends JpaRepository<Programming
                 LEFT JOIN FETCH pe.exerciseGroup eg
                 LEFT JOIN FETCH eg.exam e
             WHERE e.endDate > :dateTime
-             """)
+            """)
     List<ProgrammingExercise> findAllWithEagerExamByExamEndDateAfterDate(@Param("dateTime") ZonedDateTime dateTime);
 
     /**
@@ -468,17 +480,6 @@ public interface ProgrammingExerciseRepository extends JpaRepository<Programming
     long countByTitleAndExerciseGroupExamCourse(String shortName, Course course);
 
     /**
-     * Find a programming exercise by its id and throw an EntityNotFoundException if it cannot be found
-     *
-     * @param programmingExerciseId of the programming exercise.
-     * @return The programming exercise related to the given id
-     */
-    @NotNull
-    default ProgrammingExercise findByIdElseThrow(long programmingExerciseId) throws EntityNotFoundException {
-        return findById(programmingExerciseId).orElseThrow(() -> new EntityNotFoundException("Programming Exercise", programmingExerciseId));
-    }
-
-    /**
      * Find a programming exercise by its id, with grading criteria loaded, and throw an EntityNotFoundException if it cannot be found
      *
      * @param exerciseId of the programming exercise.
@@ -491,20 +492,6 @@ public interface ProgrammingExerciseRepository extends JpaRepository<Programming
             WHERE e.id = :exerciseId
             """)
     Optional<ProgrammingExercise> findByIdWithGradingCriteria(@Param("exerciseId") long exerciseId);
-
-    /**
-     * Finds all programming exercises with eager template participation and the given programming language.
-     *
-     * @param programmingLanguage the programming language of the exercises to find.
-     * @return a list of programming exercises with eager template participation.
-     */
-    @Query("""
-            SELECT DISTINCT pe
-            FROM ProgrammingExercise pe
-                LEFT JOIN FETCH pe.templateParticipation tp
-            WHERE pe.programmingLanguage = :programmingLanguage
-            """)
-    List<ProgrammingExercise> findAllByProgrammingLanguageWithTemplateParticipation(@Param("programmingLanguage") ProgrammingLanguage programmingLanguage);
 
     default ProgrammingExercise findByIdWithGradingCriteriaElseThrow(long exerciseId) {
         return findByIdWithGradingCriteria(exerciseId).orElseThrow(() -> new EntityNotFoundException("Programming Exercise", exerciseId));
@@ -554,6 +541,7 @@ public interface ProgrammingExerciseRepository extends JpaRepository<Programming
      * @throws EntityNotFoundException the programming exercise could not be found.
      */
     @NotNull
+    // TODO: rename, this method does more than it promises
     default ProgrammingExercise findByIdWithTemplateAndSolutionParticipationElseThrow(long programmingExerciseId) throws EntityNotFoundException {
         Optional<ProgrammingExercise> programmingExercise = findWithTemplateAndSolutionParticipationTeamAssignmentConfigCategoriesById(programmingExerciseId);
         return programmingExercise.orElseThrow(() -> new EntityNotFoundException("Programming Exercise", programmingExerciseId));
@@ -629,46 +617,7 @@ public interface ProgrammingExerciseRepository extends JpaRepository<Programming
             long programmingExerciseId) throws EntityNotFoundException {
         Optional<ProgrammingExercise> programmingExercise = findWithTemplateAndSolutionParticipationTeamAssignmentConfigCategoriesAndCompetenciesAndPlagiarismDetectionConfigById(
                 programmingExerciseId);
-        return programmingExercise.orElseThrow(() -> new EntityNotFoundException("Programming Exercise", programmingExerciseId));
-    }
-
-    /**
-     * Finds a programming exercise by its id including the submissions for its solution and template participation.
-     *
-     * @param exerciseId            The id of the programming exercise.
-     * @param withSubmissionResults True, if the results of the template and solution should be included as well.
-     * @param withGradingCriteria   True, if the grading instructions of the exercise should be included as well.
-     * @return A programming exercise that has the given id.
-     * @throws EntityNotFoundException In case no exercise with the given id exists.
-     */
-    @NotNull
-    default ProgrammingExercise findByIdWithTemplateAndSolutionParticipationSubmissionsAndAuxiliaryRepositoriesElseThrow(long exerciseId, boolean withSubmissionResults,
-            boolean withGradingCriteria) throws EntityNotFoundException {
-        final Specification<ProgrammingExercise> specification = (root, query, criteriaBuilder) -> {
-            root.fetch(Exercise_.CATEGORIES, JoinType.LEFT);
-            root.fetch(Exercise_.TEAM_ASSIGNMENT_CONFIG, JoinType.LEFT);
-            root.fetch(ProgrammingExercise_.AUXILIARY_REPOSITORIES, JoinType.LEFT);
-
-            if (withGradingCriteria) {
-                root.fetch(Exercise_.GRADING_CRITERIA, JoinType.LEFT);
-            }
-
-            final Fetch<ProgrammingExercise, TemplateProgrammingExerciseParticipation> joinTemplateParticipation = root.fetch(ProgrammingExercise_.TEMPLATE_PARTICIPATION,
-                    JoinType.LEFT);
-            final Fetch<TemplateProgrammingExerciseParticipation, Submission> joinTemplateSubmissions = joinTemplateParticipation.fetch(Participation_.SUBMISSIONS, JoinType.LEFT);
-            final Fetch<ProgrammingExercise, SolutionProgrammingExerciseParticipation> joinSolutionParticipation = root.fetch(ProgrammingExercise_.SOLUTION_PARTICIPATION,
-                    JoinType.LEFT);
-            final Fetch<TemplateProgrammingExerciseParticipation, Submission> joinSolutionSubmissions = joinSolutionParticipation.fetch(Participation_.SUBMISSIONS, JoinType.LEFT);
-
-            if (withSubmissionResults) {
-                joinTemplateSubmissions.fetch(Submission_.RESULTS, JoinType.LEFT);
-                joinSolutionSubmissions.fetch(Submission_.RESULTS, JoinType.LEFT);
-            }
-
-            return null;
-        };
-
-        return findOneByIdElseThrow(specification, exerciseId);
+        return getValueElseThrow(programmingExercise, programmingExerciseId);
     }
 
     /**
@@ -712,8 +661,16 @@ public interface ProgrammingExerciseRepository extends JpaRepository<Programming
      */
     @NotNull
     default ProgrammingExercise findByIdWithTemplateAndSolutionParticipationLatestResultFeedbackTestCasesElseThrow(long programmingExerciseId) throws EntityNotFoundException {
-        Optional<ProgrammingExercise> programmingExercise = findWithTemplateAndSolutionParticipationLatestResultFeedbackTestCasesById(programmingExerciseId);
-        return programmingExercise.orElseThrow(() -> new EntityNotFoundException("Programming Exercise", programmingExerciseId));
+        // TODO: This is a dark hack. Move this into a service where we properly load only the solution participation in the second step
+        Optional<ProgrammingExercise> programmingExerciseWithTemplate = findWithTemplateParticipationLatestResultFeedbackTestCasesById(programmingExerciseId);
+        Optional<ProgrammingExercise> programmingExerciseWithSolution = findWithSolutionParticipationLatestResultFeedbackTestCasesById(programmingExerciseId);
+
+        var withTemplate = programmingExerciseWithTemplate.orElseThrow(() -> new EntityNotFoundException("Programming Exercise", programmingExerciseId));
+        var withSolution = programmingExerciseWithSolution.orElseThrow(() -> new EntityNotFoundException("Programming Exercise", programmingExerciseId));
+
+        withTemplate.setSolutionParticipation(withSolution.getSolutionParticipation());
+
+        return withTemplate;
     }
 
     @NotNull
@@ -722,24 +679,48 @@ public interface ProgrammingExerciseRepository extends JpaRepository<Programming
     }
 
     /**
-     * Retrieve the programming exercise from a programming exercise participation. In case the programming exercise is null or not initialized,
-     * this method will load it properly from the database and connect it to the participation
+     * Retrieves the associated ProgrammingExercise for a given ProgrammingExerciseParticipation.
+     * If the ProgrammingExercise is not already loaded, it is fetched from the database and linked
+     * to the specified participation. This method handles different types of participation
+     * (template, solution, student) to optimize database queries and avoid performance bottlenecks.
      *
-     * @param participation the programming exercise participation for which the programming exercise should be found
-     * @return the programming exercise
+     * @param participation the programming exercise participation object; must not be null
+     * @return the linked ProgrammingExercise, or null if not found or the participation is not initialized
      */
     @Nullable
     default ProgrammingExercise getProgrammingExerciseFromParticipation(ProgrammingExerciseParticipation participation) {
         // Note: if this participation was retrieved as Participation (abstract super class) from the database, the programming exercise might not be correctly initialized
         if (participation.getProgrammingExercise() == null || !Hibernate.isInitialized(participation.getProgrammingExercise())) {
             // Find the programming exercise for the given participation
-            var optionalProgrammingExercise = findByParticipationId(participation.getId());
+            // NOTE: we use different methods to find the programming exercise based on the participation type on purpose to avoid slow database queries
+            long participationId = participation.getId();
+            Optional<ProgrammingExercise> optionalProgrammingExercise = switch (participation) {
+                case TemplateProgrammingExerciseParticipation ignored -> findByTemplateParticipationId(participationId);
+                case SolutionProgrammingExerciseParticipation ignored -> findBySolutionParticipationId(participationId);
+                case ProgrammingExerciseStudentParticipation ignored -> findByStudentParticipationId(participationId);
+                default -> Optional.empty();
+            };
             if (optionalProgrammingExercise.isEmpty()) {
                 return null;
             }
             participation.setProgrammingExercise(optionalProgrammingExercise.get());
         }
         return participation.getProgrammingExercise();
+    }
+
+    /**
+     * Retrieve the programming exercise from a programming exercise participation.
+     *
+     * @param participation The programming exercise participation for which to retrieve the programming exercise.
+     * @return The programming exercise of the provided participation.
+     */
+    @NotNull
+    default ProgrammingExercise getProgrammingExerciseFromParticipationElseThrow(ProgrammingExerciseParticipation participation) {
+        ProgrammingExercise programmingExercise = getProgrammingExerciseFromParticipation(participation);
+        if (programmingExercise == null) {
+            throw new EntityNotFoundException("No programming exercise found for the participation with id " + participation.getId());
+        }
+        return programmingExercise;
     }
 
     /**
@@ -824,6 +805,46 @@ public interface ProgrammingExerciseRepository extends JpaRepository<Programming
         if (!exercise.hasBuildPlanAccessSecretSet()) {
             exercise.generateAndSetBuildPlanAccessSecret();
             save(exercise);
+        }
+    }
+
+    /**
+     * Fetch options for the {@link ProgrammingExercise} entity.
+     * Each option specifies an entity or a collection of entities to fetch eagerly when using a dynamic fetching query.
+     */
+    enum ProgrammingExerciseFetchOptions implements FetchOptions {
+
+        // @formatter:off
+        Categories(Exercise_.CATEGORIES),
+        TeamAssignmentConfig(Exercise_.TEAM_ASSIGNMENT_CONFIG),
+        AuxiliaryRepositories(ProgrammingExercise_.AUXILIARY_REPOSITORIES),
+        GradingCriteria(Exercise_.GRADING_CRITERIA),
+        StudentParticipations(ProgrammingExercise_.STUDENT_PARTICIPATIONS),
+        TemplateParticipation(ProgrammingExercise_.TEMPLATE_PARTICIPATION),
+        SolutionParticipation(ProgrammingExercise_.SOLUTION_PARTICIPATION),
+        TestCases(ProgrammingExercise_.TEST_CASES),
+        Tasks(ProgrammingExercise_.TASKS),
+        StaticCodeAnalysisCategories(ProgrammingExercise_.STATIC_CODE_ANALYSIS_CATEGORIES),
+        SubmissionPolicy(ProgrammingExercise_.SUBMISSION_POLICY),
+        ExerciseHints(ProgrammingExercise_.EXERCISE_HINTS),
+        Competencies(ProgrammingExercise_.COMPETENCIES),
+        Teams(ProgrammingExercise_.TEAMS),
+        TutorParticipations(ProgrammingExercise_.TUTOR_PARTICIPATIONS),
+        ExampleSubmissions(ProgrammingExercise_.EXAMPLE_SUBMISSIONS),
+        Attachments(ProgrammingExercise_.ATTACHMENTS),
+        Posts(ProgrammingExercise_.POSTS),
+        PlagiarismCases(ProgrammingExercise_.PLAGIARISM_CASES),
+        PlagiarismDetectionConfig(ProgrammingExercise_.PLAGIARISM_DETECTION_CONFIG);
+        // @formatter:on
+
+        private final String fetchPath;
+
+        ProgrammingExerciseFetchOptions(String fetchPath) {
+            this.fetchPath = fetchPath;
+        }
+
+        public String getFetchPath() {
+            return fetchPath;
         }
     }
 }
