@@ -4,10 +4,10 @@ import static de.tum.in.www1.artemis.config.Constants.CHECKED_OUT_REPOS_TEMP_DIR
 import static de.tum.in.www1.artemis.config.Constants.LOCALCI_RESULTS_DIRECTORY;
 import static de.tum.in.www1.artemis.config.Constants.LOCALCI_WORKING_DIRECTORY;
 import static de.tum.in.www1.artemis.config.Constants.PROFILE_BUILDAGENT;
+import static de.tum.in.www1.artemis.service.connectors.localci.buildagent.TestResultXmlParser.processTestResultFile;
 
 import java.io.IOException;
-import java.io.StringReader;
-import java.net.URL;
+import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -16,9 +16,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 
-import javax.xml.stream.XMLInputFactory;
-import javax.xml.stream.XMLStreamException;
-import javax.xml.stream.XMLStreamReader;
+import jakarta.annotation.Nullable;
 
 import org.apache.commons.compress.archivers.tar.TarArchiveEntry;
 import org.apache.commons.compress.archivers.tar.TarArchiveInputStream;
@@ -30,26 +28,22 @@ import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Service;
-import org.w3c.dom.Document;
 
 import com.github.dockerjava.api.command.CreateContainerResponse;
 import com.github.dockerjava.api.exception.NotFoundException;
 
-import de.tum.in.www1.artemis.config.localvcci.LocalCIConfiguration;
-import de.tum.in.www1.artemis.domain.*;
+import de.tum.in.www1.artemis.domain.Repository;
+import de.tum.in.www1.artemis.domain.VcsRepositoryUri;
 import de.tum.in.www1.artemis.domain.enumeration.RepositoryType;
 import de.tum.in.www1.artemis.domain.enumeration.StaticCodeAnalysisTool;
 import de.tum.in.www1.artemis.exception.LocalCIException;
-import de.tum.in.www1.artemis.service.connectors.GitService;
-import de.tum.in.www1.artemis.service.connectors.localci.dto.LocalCIBuildJobQueueItem;
-import de.tum.in.www1.artemis.service.connectors.localci.dto.LocalCIBuildResult;
+import de.tum.in.www1.artemis.service.connectors.localci.dto.BuildJobQueueItem;
+import de.tum.in.www1.artemis.service.connectors.localci.dto.BuildResult;
+import de.tum.in.www1.artemis.service.connectors.localci.scaparser.ReportParser;
 import de.tum.in.www1.artemis.service.connectors.localci.scaparser.exception.UnsupportedToolException;
-import de.tum.in.www1.artemis.service.connectors.localci.scaparser.strategy.ParserPolicy;
-import de.tum.in.www1.artemis.service.connectors.localci.scaparser.strategy.ParserStrategy;
 import de.tum.in.www1.artemis.service.connectors.localvc.LocalVCRepositoryUri;
 import de.tum.in.www1.artemis.service.dto.StaticCodeAnalysisReportDTO;
 import de.tum.in.www1.artemis.service.util.TimeLogUtil;
-import de.tum.in.www1.artemis.service.util.XmlFileUtils;
 import de.tum.in.www1.artemis.web.rest.errors.EntityNotFoundException;
 
 /**
@@ -64,74 +58,93 @@ public class BuildJobExecutionService {
 
     private final BuildJobContainerService buildJobContainerService;
 
-    /**
-     * Instead of creating a new XMLInputFactory for every build job, it is created once and provided as a Bean (see {@link LocalCIConfiguration#localCIXMLInputFactory()}).
-     */
-    private final XMLInputFactory localCIXMLInputFactory;
+    private final BuildJobGitService buildJobGitService;
 
-    private final GitService gitService;
+    private final BuildAgentDockerService buildAgentDockerService;
 
-    private final LocalCIDockerService localCIDockerService;
-
-    @Value("${artemis.version-control.url}")
-    private URL localVCBaseUrl;
+    private final BuildLogsMap buildLogsMap;
 
     @Value("${artemis.version-control.default-branch:main}")
     private String defaultBranch;
 
-    public BuildJobExecutionService(BuildJobContainerService buildJobContainerService, XMLInputFactory localCIXMLInputFactory, GitService gitService,
-            LocalCIDockerService localCIDockerService) {
+    public BuildJobExecutionService(BuildJobContainerService buildJobContainerService, BuildJobGitService buildJobGitService, BuildAgentDockerService buildAgentDockerService,
+            BuildLogsMap buildLogsMap) {
         this.buildJobContainerService = buildJobContainerService;
-        this.localCIXMLInputFactory = localCIXMLInputFactory;
-        this.gitService = gitService;
-        this.localCIDockerService = localCIDockerService;
+        this.buildJobGitService = buildJobGitService;
+        this.buildAgentDockerService = buildAgentDockerService;
+        this.buildLogsMap = buildLogsMap;
     }
 
     /**
-     * Prepare the paths to the assignment and test repositories, the branch to check out, the volume configuration for the Docker container, and the container configuration,
-     * and then call to
-     * execute the
-     * job.
+     * Orchestrates the execution of a build job in a Docker container. This method handles the preparation and configuration of the container,
+     * including cloning the necessary repositories, checking out the appropriate branches, and preparing the environment for the build.
+     * The method concludes by executing the build script within the Docker environment and parsing the results.
+     * <p>
+     * Key Steps:
+     * 1. Pulls the required Docker image if not already available.
+     * 2. Retrieves commit hashes for assignment and test repositories.
+     * 3. Clones the repositories for assignment, tests, solution (if applicable), and any auxiliary repositories into the container.
+     * 4. Configures the Docker container with the necessary environment and volume settings.
+     * 5. Delegates to the 'runScriptAndParseResults' method to execute the build script and process the results.
+     * <p>
+     * If any step fails, an exception is thrown and the container cleanup is initiated.
      *
-     * @param buildJob      The build job object containing necessary information to execute the build job.
-     * @param containerName The name of the Docker container that will be used to run the build job.
-     *                          It needs to be prepared beforehand to stop and remove the container if something goes wrong here.
-     * @return The build result.
-     * @throws LocalCIException If some error occurs while preparing or running the build job.
+     * @param buildJob      The build job object containing details necessary for executing the build.
+     * @param containerName The name of the Docker container that will be prepared and used for the build job.
+     * @return The result of the build job as a {@link BuildResult}.
+     * @throws LocalCIException If any error occurs during the preparation or execution of the build job.
      */
-    public LocalCIBuildResult runBuildJob(LocalCIBuildJobQueueItem buildJob, String containerName) {
+    public BuildResult runBuildJob(BuildJobQueueItem buildJob, String containerName) {
+
+        String msg = "~~~~~~~~~~~~~~~~~~~~ Start Build Job " + buildJob.id() + " ~~~~~~~~~~~~~~~~~~~~";
+        log.debug(msg);
+        buildLogsMap.appendBuildLogEntry(buildJob.id(), msg);
 
         // Check if the Docker image is available. If not, pull it.
         try {
-            localCIDockerService.pullDockerImage(buildJob.buildConfig().dockerImage());
+            buildAgentDockerService.pullDockerImage(buildJob, buildLogsMap);
         }
         catch (LocalCIException e) {
-            throw new LocalCIException("Could not pull Docker image " + buildJob.buildConfig().dockerImage(), e);
+            msg = "Could not pull Docker image " + buildJob.buildConfig().dockerImage();
+            buildLogsMap.appendBuildLogEntry(buildJob.id(), msg);
+            throw new LocalCIException(msg, e);
         }
 
         boolean isPushToTestOrAuxRepository = buildJob.repositoryInfo().triggeredByPushTo() == RepositoryType.TESTS
                 || buildJob.repositoryInfo().triggeredByPushTo() == RepositoryType.AUXILIARY;
 
         // get the local repository paths for assignment, tests, auxiliary and solution
-        LocalVCRepositoryUri assignmentRepoUri = new LocalVCRepositoryUri(buildJob.repositoryInfo().assignmentRepositoryUri(), localVCBaseUrl);
-        LocalVCRepositoryUri testsRepoUri = new LocalVCRepositoryUri(buildJob.repositoryInfo().testRepositoryUri(), localVCBaseUrl);
+        LocalVCRepositoryUri assignmentRepoUri = new LocalVCRepositoryUri(buildJob.repositoryInfo().assignmentRepositoryUri());
+        LocalVCRepositoryUri testsRepoUri = new LocalVCRepositoryUri(buildJob.repositoryInfo().testRepositoryUri());
 
         // retrieve last commit hash from repositories
-        String assignmentCommitHash = buildJob.buildConfig().commitHash();
+        String assignmentCommitHash = buildJob.buildConfig().assignmentCommitHash();
         if (assignmentCommitHash == null) {
             try {
-                assignmentCommitHash = gitService.getLastCommitHash(assignmentRepoUri).getName();
+                var commitObjectId = buildJobGitService.getLastCommitHash(assignmentRepoUri);
+                if (commitObjectId != null) {
+                    assignmentCommitHash = commitObjectId.getName();
+                }
             }
             catch (EntityNotFoundException e) {
-                throw new LocalCIException("Could not find last commit hash for assignment repository " + assignmentRepoUri.repositorySlug(), e);
+                msg = "Could not find last commit hash for assignment repository " + assignmentRepoUri.repositorySlug();
+                buildLogsMap.appendBuildLogEntry(buildJob.id(), msg);
+                throw new LocalCIException(msg, e);
             }
         }
-        String testCommitHash;
-        try {
-            testCommitHash = gitService.getLastCommitHash(testsRepoUri).getName();
-        }
-        catch (EntityNotFoundException e) {
-            throw new LocalCIException("Could not find last commit hash for test repository " + testsRepoUri.repositorySlug(), e);
+        String testCommitHash = buildJob.buildConfig().testCommitHash();
+        if (testCommitHash == null) {
+            try {
+                var commitObjectId = buildJobGitService.getLastCommitHash(testsRepoUri);
+                if (commitObjectId != null) {
+                    testCommitHash = commitObjectId.getName();
+                }
+            }
+            catch (EntityNotFoundException e) {
+                msg = "Could not find last commit hash for test repository " + testsRepoUri.repositorySlug();
+                buildLogsMap.appendBuildLogEntry(buildJob.id(), msg);
+                throw new LocalCIException(msg, e);
+            }
         }
 
         Path assignmentRepositoryPath;
@@ -140,27 +153,27 @@ public class BuildJobExecutionService {
          * If this build job is triggered by a push to the test repository, the commit hash reflects changes to the test repository.
          * Thus, we do not checkout the commit hash of the test repository in the assignment repository.
          */
-        if (buildJob.buildConfig().commitHash() != null && !isPushToTestOrAuxRepository) {
+        if (buildJob.buildConfig().assignmentCommitHash() != null && !isPushToTestOrAuxRepository) {
             // Clone the assignment repository into a temporary directory with the name of the commit hash and then checkout the commit hash.
-            assignmentRepositoryPath = cloneRepository(assignmentRepoUri, assignmentCommitHash, true);
+            assignmentRepositoryPath = cloneRepository(assignmentRepoUri, assignmentCommitHash, true, buildJob.id());
         }
         else {
             // Clone the assignment to use the latest commit of the default branch
-            assignmentRepositoryPath = cloneRepository(assignmentRepoUri, assignmentCommitHash, false);
+            assignmentRepositoryPath = cloneRepository(assignmentRepoUri, assignmentCommitHash, false, buildJob.id());
         }
 
-        Path testsRepositoryPath = cloneRepository(testsRepoUri, assignmentCommitHash, false);
+        Path testsRepositoryPath = cloneRepository(testsRepoUri, assignmentCommitHash, false, buildJob.id());
 
         LocalVCRepositoryUri solutionRepoUri = null;
         Path solutionRepositoryPath = null;
         if (buildJob.repositoryInfo().solutionRepositoryUri() != null) {
-            solutionRepoUri = new LocalVCRepositoryUri(buildJob.repositoryInfo().solutionRepositoryUri(), localVCBaseUrl);
+            solutionRepoUri = new LocalVCRepositoryUri(buildJob.repositoryInfo().solutionRepositoryUri());
             // In case we have the same repository for assignment and solution, we can use the same path
             if (Objects.equals(solutionRepoUri.repositorySlug(), assignmentRepoUri.repositorySlug())) {
                 solutionRepositoryPath = assignmentRepositoryPath;
             }
             else {
-                solutionRepositoryPath = cloneRepository(solutionRepoUri, assignmentCommitHash, false);
+                solutionRepositoryPath = cloneRepository(solutionRepoUri, assignmentCommitHash, false, buildJob.id());
             }
         }
 
@@ -170,8 +183,8 @@ public class BuildJobExecutionService {
 
         int index = 0;
         for (String auxiliaryRepositoryUri : auxiliaryRepositoryUriList) {
-            auxiliaryRepositoriesUris[index] = new LocalVCRepositoryUri(auxiliaryRepositoryUri, localVCBaseUrl);
-            auxiliaryRepositoriesPaths[index] = cloneRepository(auxiliaryRepositoriesUris[index], assignmentCommitHash, false);
+            auxiliaryRepositoriesUris[index] = new LocalVCRepositoryUri(auxiliaryRepositoryUri);
+            auxiliaryRepositoriesPaths[index] = cloneRepository(auxiliaryRepositoriesUris[index], assignmentCommitHash, false, buildJob.id());
             index++;
         }
 
@@ -182,30 +195,63 @@ public class BuildJobExecutionService {
     }
 
     /**
-     * Runs the build job. This includes creating and starting a Docker container, executing the build script, and processing the build result.
+     * Executes a build job within a Docker container by running a designated build script and processing the results.
+     * The method manages the entire lifecycle of the container used for the build, from starting it, populating it with necessary repositories,
+     * running the build script, to finally stopping the container and cleaning up resources.
+     * <p>
+     * The method handles:
+     * - Container preparation and initialization.
+     * - Repository setup within the container for assignment, tests, solutions, and auxiliary content.
+     * - Execution of the build script and capturing its results.
+     * - Retrieval and parsing of the build results stored in a specified format (e.g., tar files).
+     * - Handling exceptions that occur during the build process, including not finding expected results, and managing filesystem cleanups.
      *
-     * @param containerName The name of the container that should be used for the build job. This is used to remove the container and is also accessible from outside build job
-     *                          running in its own thread.
-     * @param containerId   The id of the container that should be used for the build job.
-     * @return The build result.
-     * @throws LocalCIException if something went wrong while running the build job.
+     * @param buildJob                   The build job queue item containing details needed for the build process.
+     * @param containerName              The name of the Docker container, used for logging and management purposes.
+     * @param containerId                The identifier of the Docker container used for the build job.
+     * @param assignmentRepositoryUri    URI for the assignment repository.
+     * @param testRepositoryUri          URI for the test repository.
+     * @param solutionRepositoryUri      Optional URI for the solution repository.
+     * @param auxiliaryRepositoriesUris  Array of URIs for any auxiliary repositories needed for the build.
+     * @param assignmentRepositoryPath   Local file system path to the assignment repository.
+     * @param testsRepositoryPath        Local file system path to the test repository.
+     * @param solutionRepositoryPath     Optional local file system path to the solution repository.
+     * @param auxiliaryRepositoriesPaths Array of paths for the auxiliary repositories.
+     * @param assignmentRepoCommitHash   Commit hash for the assignment repository used to fetch the specific state of the repository.
+     * @param testRepoCommitHash         Commit hash for the test repository used similarly.
+     * @return A {@link BuildResult} object representing the outcome of the build job.
+     * @throws LocalCIException If errors occur during the build process or if the test results cannot be parsed successfully.
      */
-    private LocalCIBuildResult runScriptAndParseResults(LocalCIBuildJobQueueItem buildJob, String containerName, String containerId, VcsRepositoryUri assignmentRepositoryUri,
+    // TODO: This method has too many params, we should reduce the number an rather pass an object (record)
+    private BuildResult runScriptAndParseResults(BuildJobQueueItem buildJob, String containerName, String containerId, VcsRepositoryUri assignmentRepositoryUri,
             VcsRepositoryUri testRepositoryUri, VcsRepositoryUri solutionRepositoryUri, VcsRepositoryUri[] auxiliaryRepositoriesUris, Path assignmentRepositoryPath,
-            Path testsRepositoryPath, Path solutionRepositoryPath, Path[] auxiliaryRepositoriesPaths, String assignmentRepoCommitHash, String testRepoCommitHash) {
+            Path testsRepositoryPath, Path solutionRepositoryPath, Path[] auxiliaryRepositoriesPaths, @Nullable String assignmentRepoCommitHash,
+            @Nullable String testRepoCommitHash) {
 
         long timeNanoStart = System.nanoTime();
 
         buildJobContainerService.startContainer(containerId);
 
-        log.info("Started container for build job {}", containerName);
+        String msg = "~~~~~~~~~~~~~~~~~~~~ Started container " + containerName + " for build job " + buildJob.id() + " ~~~~~~~~~~~~~~~~~~~~";
+        buildLogsMap.appendBuildLogEntry(buildJob.id(), msg);
 
+        log.info(msg, containerName);
+
+        msg = "~~~~~~~~~~~~~~~~~~~~ Populating build job container with repositories and build script ~~~~~~~~~~~~~~~~~~~~";
+        buildLogsMap.appendBuildLogEntry(buildJob.id(), msg);
+        log.debug(msg);
         buildJobContainerService.populateBuildJobContainer(containerId, assignmentRepositoryPath, testsRepositoryPath, solutionRepositoryPath, auxiliaryRepositoriesPaths,
                 buildJob.repositoryInfo().auxiliaryRepositoryCheckoutDirectories(), buildJob.buildConfig().programmingLanguage());
 
-        List<BuildLogEntry> buildLogEntries = buildJobContainerService.runScriptInContainer(containerId);
+        msg = "~~~~~~~~~~~~~~~~~~~~ Executing Build Script for Build job " + buildJob.id() + " ~~~~~~~~~~~~~~~~~~~~";
+        buildLogsMap.appendBuildLogEntry(buildJob.id(), msg);
+        log.debug(msg);
 
-        log.info("Finished running the build script in container {}", containerName);
+        buildJobContainerService.runScriptInContainer(containerId, buildJob.id());
+
+        msg = "~~~~~~~~~~~~~~~~~~~~ Finished Executing Build Script for Build job " + buildJob.id() + " ~~~~~~~~~~~~~~~~~~~~";
+        buildLogsMap.appendBuildLogEntry(buildJob.id(), msg);
+        log.info(msg);
 
         ZonedDateTime buildCompletedDate = ZonedDateTime.now();
 
@@ -219,6 +265,9 @@ public class BuildJobExecutionService {
             testResultsTarInputStream = buildJobContainerService.getArchiveFromContainer(containerId, LOCALCI_WORKING_DIRECTORY + LOCALCI_RESULTS_DIRECTORY);
         }
         catch (NotFoundException e) {
+            msg = "Could not find test results in container " + containerName;
+            buildLogsMap.appendBuildLogEntry(buildJob.id(), msg);
+            log.error(msg, e);
             // If the test results are not found, this means that something went wrong during the build and testing of the submission.
             return constructFailedBuildResult(buildJob.buildConfig().branch(), assignmentRepoCommitHash, testRepoCommitHash, buildCompletedDate);
         }
@@ -226,50 +275,57 @@ public class BuildJobExecutionService {
             buildJobContainerService.stopContainer(containerName);
 
             // Delete the cloned repositories
-            deleteCloneRepo(assignmentRepositoryUri, assignmentRepoCommitHash);
-            deleteCloneRepo(testRepositoryUri, assignmentRepoCommitHash);
+            deleteCloneRepo(assignmentRepositoryUri, assignmentRepoCommitHash, buildJob.id());
+            deleteCloneRepo(testRepositoryUri, assignmentRepoCommitHash, buildJob.id());
             // do not try to delete the temp repository if it does not exist or is the same as the assignment reposity
             if (solutionRepositoryUri != null && !Objects.equals(assignmentRepositoryUri.repositorySlug(), solutionRepositoryUri.repositorySlug())) {
-                deleteCloneRepo(solutionRepositoryUri, assignmentRepoCommitHash);
+                deleteCloneRepo(solutionRepositoryUri, assignmentRepoCommitHash, buildJob.id());
             }
             for (VcsRepositoryUri auxiliaryRepositoryUri : auxiliaryRepositoriesUris) {
-                deleteCloneRepo(auxiliaryRepositoryUri, assignmentRepoCommitHash);
+                deleteCloneRepo(auxiliaryRepositoryUri, assignmentRepoCommitHash, buildJob.id());
             }
 
             try {
                 FileUtils.deleteDirectory(Path.of(CHECKED_OUT_REPOS_TEMP_DIR, assignmentRepoCommitHash).toFile());
             }
             catch (IOException e) {
-                log.error("Could not delete " + CHECKED_OUT_REPOS_TEMP_DIR + " directory", e);
+                msg = "Could not delete " + CHECKED_OUT_REPOS_TEMP_DIR + " directory";
+                buildLogsMap.appendBuildLogEntry(buildJob.id(), msg);
+                log.error(msg, e);
             }
         }
 
-        LocalCIBuildResult buildResult;
+        BuildResult buildResult;
         try {
-            buildResult = parseTestResults(testResultsTarInputStream, buildJob.buildConfig().branch(), assignmentRepoCommitHash, testRepoCommitHash, buildCompletedDate);
-            buildResult.setBuildLogEntries(buildLogEntries);
+            buildResult = parseTestResults(testResultsTarInputStream, buildJob.buildConfig().branch(), assignmentRepoCommitHash, testRepoCommitHash, buildCompletedDate,
+                    buildJob.id());
+            buildResult.setBuildLogEntries(buildLogsMap.getBuildLogs(buildJob.id()));
         }
-        catch (IOException | XMLStreamException | IllegalStateException e) {
-            throw new LocalCIException("Error while parsing test results", e);
+        catch (IOException | IllegalStateException e) {
+            msg = "Error while parsing test results";
+            buildLogsMap.appendBuildLogEntry(buildJob.id(), msg);
+            throw new LocalCIException(msg, e);
         }
 
-        log.info("Building and testing submission for repository {} and commit hash {} took {}", assignmentRepositoryUri.repositorySlug(), assignmentRepoCommitHash,
-                TimeLogUtil.formatDurationFrom(timeNanoStart));
+        msg = "Building and testing submission for repository " + assignmentRepositoryUri.repositorySlug() + " and commit hash " + assignmentRepoCommitHash + " took "
+                + TimeLogUtil.formatDurationFrom(timeNanoStart);
+        buildLogsMap.appendBuildLogEntry(buildJob.id(), msg);
+        log.info(msg);
 
         return buildResult;
     }
 
     // --- Helper methods ----
 
-    private LocalCIBuildResult parseTestResults(TarArchiveInputStream testResultsTarInputStream, String assignmentRepoBranchName, String assignmentRepoCommitHash,
-            String testsRepoCommitHash, ZonedDateTime buildCompletedDate) throws IOException, XMLStreamException {
+    private BuildResult parseTestResults(TarArchiveInputStream testResultsTarInputStream, String assignmentRepoBranchName, String assignmentRepoCommitHash,
+            String testsRepoCommitHash, ZonedDateTime buildCompletedDate, String buildJobId) throws IOException {
 
-        List<LocalCIBuildResult.LocalCITestJobDTO> failedTests = new ArrayList<>();
-        List<LocalCIBuildResult.LocalCITestJobDTO> successfulTests = new ArrayList<>();
+        List<BuildResult.LocalCITestJobDTO> failedTests = new ArrayList<>();
+        List<BuildResult.LocalCITestJobDTO> successfulTests = new ArrayList<>();
         List<StaticCodeAnalysisReportDTO> staticCodeAnalysisReports = new ArrayList<>();
 
         TarArchiveEntry tarEntry;
-        while ((tarEntry = testResultsTarInputStream.getNextTarEntry()) != null) {
+        while ((tarEntry = testResultsTarInputStream.getNextEntry()) != null) {
             // Go through all tar entries that are test result files.
             if (!isValidTestResultFile(tarEntry)) {
                 continue;
@@ -280,13 +336,29 @@ public class BuildJobExecutionService {
             // Get the file name of the tar entry.
             String fileName = getFileName(tarEntry);
 
-            // Check if the file is a static code analysis report file
-            if (StaticCodeAnalysisTool.getToolByFilePattern(fileName).isPresent()) {
-                processStaticCodeAnalysisReportFile(fileName, xmlString, staticCodeAnalysisReports);
+            try {
+                // Check if the file is a static code analysis report file
+                if (StaticCodeAnalysisTool.getToolByFilePattern(fileName).isPresent()) {
+                    processStaticCodeAnalysisReportFile(fileName, xmlString, staticCodeAnalysisReports, buildJobId);
+                }
+                else {
+                    // ugly workaround because in swift result files \n\t breaks the parsing
+                    var testResultFileString = xmlString.replace("\n\t", "");
+                    if (!testResultFileString.isBlank()) {
+                        processTestResultFile(testResultFileString, failedTests, successfulTests);
+                    }
+                    else {
+                        String msg = "The file " + fileName + " does not contain any testcases.";
+                        buildLogsMap.appendBuildLogEntry(buildJobId, msg);
+                        log.warn(msg);
+                    }
+                }
             }
-            else {
-                // ugly workaround because in swift result files \n\t breaks the parsing
-                processTestResultFile(xmlString.replace("\n\t", ""), failedTests, successfulTests);
+            catch (IllegalStateException e) {
+                // Exceptions due to one invalid sca file should not lead to the whole build to fail.
+                String msg = "Invalid report format in file " + fileName + ", ignoring.";
+                buildLogsMap.appendBuildLogEntry(buildJobId, msg);
+                log.warn(msg, e);
             }
         }
 
@@ -300,7 +372,7 @@ public class BuildJobExecutionService {
         String result = (lastIndexOfSlash != -1 && lastIndexOfSlash + 1 < name.length()) ? name.substring(lastIndexOfSlash + 1) : name;
 
         // Java test result files are named "TEST-*.xml", Python test result files are named "*results.xml".
-        return !tarArchiveEntry.isDirectory() && ((result.endsWith(".xml") && !result.equals("pom.xml")));
+        return !tarArchiveEntry.isDirectory() && result.endsWith(".xml") && !result.equals("pom.xml");
     }
 
     /**
@@ -329,15 +401,13 @@ public class BuildJobExecutionService {
      * @param xmlString                 the content of the static code analysis report file
      * @param staticCodeAnalysisReports the list of static code analysis reports
      */
-    private void processStaticCodeAnalysisReportFile(String fileName, String xmlString, List<StaticCodeAnalysisReportDTO> staticCodeAnalysisReports) {
-        Document document = XmlFileUtils.readFromString(xmlString);
-        document.setDocumentURI(fileName);
+    private void processStaticCodeAnalysisReportFile(String fileName, String xmlString, List<StaticCodeAnalysisReportDTO> staticCodeAnalysisReports, String buildJobId) {
         try {
-            ParserPolicy parserPolicy = new ParserPolicy();
-            ParserStrategy parserStrategy = parserPolicy.configure(document);
-            staticCodeAnalysisReports.add(parserStrategy.parse(document));
+            staticCodeAnalysisReports.add(ReportParser.getReport(xmlString, fileName));
         }
         catch (UnsupportedToolException e) {
+            String msg = "Failed to parse static code analysis report for " + fileName;
+            buildLogsMap.appendBuildLogEntry(buildJobId, msg);
             throw new IllegalStateException("Failed to parse static code analysis report for " + fileName, e);
         }
     }
@@ -347,92 +417,22 @@ public class BuildJobExecutionService {
     }
 
     /**
-     * Processes a test result file and adds the failed and successful tests to the corresponding lists.
-     *
-     * @param testResultFileString The string that represents the test results XML file.
-     * @param failedTests          The list of failed tests.
-     * @param successfulTests      The list of successful tests.
-     * @throws XMLStreamException    if the XML stream reader cannot be created or there is an error while parsing the XML file
-     * @throws IllegalStateException if the first start element of the XML file is not a "testsuite" node
-     */
-    private void processTestResultFile(String testResultFileString, List<LocalCIBuildResult.LocalCITestJobDTO> failedTests,
-            List<LocalCIBuildResult.LocalCITestJobDTO> successfulTests) throws XMLStreamException {
-        // Create an XML stream reader for the string that represents the test results XML file.
-        XMLStreamReader xmlStreamReader = localCIXMLInputFactory.createXMLStreamReader(new StringReader(testResultFileString));
-
-        // Move to the first start element.
-        while (xmlStreamReader.hasNext() && !xmlStreamReader.isStartElement()) {
-            xmlStreamReader.next();
-        }
-
-        if ("testsuites".equals(xmlStreamReader.getLocalName())) {
-            xmlStreamReader.next();
-        }
-
-        // Check if the start element is the "testsuite" node.
-        if (!("testsuite".equals(xmlStreamReader.getLocalName()))) {
-            throw new IllegalStateException("Expected testsuite element, but got " + xmlStreamReader.getLocalName());
-        }
-
-        // Go through all testcase nodes.
-        while (xmlStreamReader.hasNext()) {
-            xmlStreamReader.next();
-
-            if (!xmlStreamReader.isStartElement() || !("testcase".equals(xmlStreamReader.getLocalName()))) {
-                continue;
-            }
-
-            // Now we are at the start of a "testcase" node.
-            processTestCaseNode(xmlStreamReader, failedTests, successfulTests);
-        }
-
-        // Close the XML stream reader.
-        xmlStreamReader.close();
-    }
-
-    private void processTestCaseNode(XMLStreamReader xmlStreamReader, List<LocalCIBuildResult.LocalCITestJobDTO> failedTests,
-            List<LocalCIBuildResult.LocalCITestJobDTO> successfulTests) throws XMLStreamException {
-        // Extract the name attribute from the "testcase" node. This is the name of the test case.
-        String name = xmlStreamReader.getAttributeValue(null, "name");
-
-        // Check if there is a failure node inside the testcase node.
-        // Call next() until there is an end element (no failure node exists inside the testcase node) or a start element (failure node exists inside the
-        // testcase node).
-        xmlStreamReader.next();
-        while (!(xmlStreamReader.isEndElement() || xmlStreamReader.isStartElement())) {
-            xmlStreamReader.next();
-        }
-        if (xmlStreamReader.isStartElement() && "failure".equals(xmlStreamReader.getLocalName())) {
-            // Extract the message attribute from the "failure" node.
-            String error = xmlStreamReader.getAttributeValue(null, "message");
-
-            // Add the failed test to the list of failed tests.
-            List<String> errors = error != null ? List.of(error) : List.of();
-            failedTests.add(new LocalCIBuildResult.LocalCITestJobDTO(name, errors));
-        }
-        else if (!"skipped".equals(xmlStreamReader.getLocalName())) {
-            // Add the successful test to the list of successful tests.
-            successfulTests.add(new LocalCIBuildResult.LocalCITestJobDTO(name, List.of()));
-        }
-    }
-
-    /**
-     * Constructs a {@link LocalCIBuildResult} that indicates a failed build from the given parameters. The lists of failed and successful tests are both empty which will be
+     * Constructs a {@link BuildResult} that indicates a failed build from the given parameters. The lists of failed and successful tests are both empty which will be
      * interpreted as a failed build by Artemis.
      *
      * @param assignmentRepoBranchName The name of the branch of the assignment repository that was checked out for the build.
      * @param assignmentRepoCommitHash The commit hash of the assignment repository that was checked out for the build.
      * @param testsRepoCommitHash      The commit hash of the tests repository that was checked out for the build.
      * @param buildRunDate             The date when the build was completed.
-     * @return a {@link LocalCIBuildResult} that indicates a failed build
+     * @return a {@link BuildResult} that indicates a failed build
      */
-    private LocalCIBuildResult constructFailedBuildResult(String assignmentRepoBranchName, String assignmentRepoCommitHash, String testsRepoCommitHash,
+    private BuildResult constructFailedBuildResult(String assignmentRepoBranchName, @Nullable String assignmentRepoCommitHash, @Nullable String testsRepoCommitHash,
             ZonedDateTime buildRunDate) {
         return constructBuildResult(List.of(), List.of(), assignmentRepoBranchName, assignmentRepoCommitHash, testsRepoCommitHash, false, buildRunDate, List.of());
     }
 
     /**
-     * Constructs a {@link LocalCIBuildResult} from the given parameters.
+     * Constructs a {@link BuildResult} from the given parameters.
      *
      * @param failedTests               The list of failed tests.
      * @param successfulTests           The list of successful tests.
@@ -442,47 +442,59 @@ public class BuildJobExecutionService {
      * @param isBuildSuccessful         Whether the build was successful or not.
      * @param buildRunDate              The date when the build was completed.
      * @param staticCodeAnalysisReports The static code analysis reports
-     * @return a {@link LocalCIBuildResult}
+     * @return a {@link BuildResult}
      */
-    private LocalCIBuildResult constructBuildResult(List<LocalCIBuildResult.LocalCITestJobDTO> failedTests, List<LocalCIBuildResult.LocalCITestJobDTO> successfulTests,
-            String assignmentRepoBranchName, String assignmentRepoCommitHash, String testsRepoCommitHash, boolean isBuildSuccessful, ZonedDateTime buildRunDate,
+    private BuildResult constructBuildResult(List<BuildResult.LocalCITestJobDTO> failedTests, List<BuildResult.LocalCITestJobDTO> successfulTests, String assignmentRepoBranchName,
+            String assignmentRepoCommitHash, String testsRepoCommitHash, boolean isBuildSuccessful, ZonedDateTime buildRunDate,
             List<StaticCodeAnalysisReportDTO> staticCodeAnalysisReports) {
-        LocalCIBuildResult.LocalCIJobDTO job = new LocalCIBuildResult.LocalCIJobDTO(failedTests, successfulTests);
+        BuildResult.LocalCIJobDTO job = new BuildResult.LocalCIJobDTO(failedTests, successfulTests);
 
-        return new LocalCIBuildResult(assignmentRepoBranchName, assignmentRepoCommitHash, testsRepoCommitHash, isBuildSuccessful, buildRunDate, List.of(job),
-                staticCodeAnalysisReports);
+        return new BuildResult(assignmentRepoBranchName, assignmentRepoCommitHash, testsRepoCommitHash, isBuildSuccessful, buildRunDate, List.of(job), staticCodeAnalysisReports);
     }
 
-    private Path cloneRepository(VcsRepositoryUri repositoryUri, String commitHash, boolean checkout) {
+    private Path cloneRepository(VcsRepositoryUri repositoryUri, @Nullable String commitHash, boolean checkout, String buildJobId) {
         try {
             // Clone the assignment repository into a temporary directory
-            Repository repository = gitService.getOrCheckoutRepository(repositoryUri, Paths.get(CHECKED_OUT_REPOS_TEMP_DIR, commitHash, repositoryUri.folderNameForRepositoryUri()),
-                    false);
-            if (checkout) {
+            // TODO: use a random value if commitHash is null
+            Repository repository = buildJobGitService.cloneRepository(repositoryUri, Path.of(CHECKED_OUT_REPOS_TEMP_DIR, commitHash, repositoryUri.folderNameForRepositoryUri()));
+            if (checkout && commitHash != null) {
                 // Checkout the commit hash
-                gitService.checkoutRepositoryAtCommit(repository, commitHash);
+                buildJobGitService.checkoutRepositoryAtCommit(repository, commitHash);
             }
+            // if repository is not closed, it causes weird IO issues when trying to delete the repository later on
+            // java.io.IOException: Unable to delete file: ...\.git\objects\pack\...
+            repository.closeBeforeDelete();
             return repository.getLocalPath();
         }
-        catch (GitAPIException e) {
-            throw new LocalCIException("Error while cloning repository", e);
+        catch (GitAPIException | IOException | URISyntaxException e) {
+            String msg = "Error while cloning repository " + repositoryUri.repositorySlug() + " with uri " + repositoryUri;
+            buildLogsMap.appendBuildLogEntry(buildJobId, msg);
+            throw new LocalCIException(msg, e);
         }
     }
 
-    private void deleteCloneRepo(VcsRepositoryUri repositoryUri, String commitHash) {
+    private void deleteCloneRepo(VcsRepositoryUri repositoryUri, @Nullable String commitHash, String buildJobId) {
+        String msg;
         try {
-            Repository repository = gitService.getExistingCheckedOutRepositoryByLocalPath(
+            // TODO: handle the case when commitHash is null
+            Repository repository = buildJobGitService.getExistingCheckedOutRepositoryByLocalPath(
                     Paths.get(CHECKED_OUT_REPOS_TEMP_DIR, commitHash, repositoryUri.folderNameForRepositoryUri()), repositoryUri, defaultBranch);
             if (repository == null) {
-                throw new EntityNotFoundException("Repository with commit hash " + commitHash + " not found");
+                msg = "Repository with commit hash " + commitHash + " not found";
+                buildLogsMap.appendBuildLogEntry(buildJobId, msg);
+                throw new EntityNotFoundException(msg);
             }
-            gitService.deleteLocalRepository(repository);
+            buildJobGitService.deleteLocalRepository(repository);
         }
         catch (EntityNotFoundException e) {
-            throw new LocalCIException("Error while checking out repository", e);
+            msg = "Error while checking out repository";
+            buildLogsMap.appendBuildLogEntry(buildJobId, msg);
+            throw new LocalCIException(msg, e);
         }
         catch (IOException e) {
-            throw new LocalCIException("Error while deleting repository", e);
+            msg = "Error while deleting repository";
+            buildLogsMap.appendBuildLogEntry(buildJobId, msg);
+            throw new LocalCIException(msg, e);
         }
     }
 }
