@@ -1,16 +1,19 @@
 package de.tum.in.www1.artemis.lecture;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.AssertionsForClassTypes.within;
 import static org.awaitility.Awaitility.await;
 
 import java.time.ZonedDateTime;
-import java.time.temporal.ChronoUnit;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+import java.util.stream.Stream;
 
+import org.glassfish.jersey.internal.util.Producer;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -21,13 +24,17 @@ import org.springframework.http.HttpStatus;
 import org.springframework.security.test.context.support.WithMockUser;
 
 import de.tum.in.www1.artemis.AbstractSpringIntegrationLocalCILocalVCTest;
+import de.tum.in.www1.artemis.StudentScoreUtilService;
 import de.tum.in.www1.artemis.competency.CompetencyProgressUtilService;
 import de.tum.in.www1.artemis.competency.CompetencyUtilService;
-import de.tum.in.www1.artemis.course.CourseUtilService;
+import de.tum.in.www1.artemis.competency.PrerequisiteUtilService;
+import de.tum.in.www1.artemis.competency.StandardizedCompetencyUtilService;
 import de.tum.in.www1.artemis.domain.Course;
 import de.tum.in.www1.artemis.domain.DomainObject;
 import de.tum.in.www1.artemis.domain.Exercise;
 import de.tum.in.www1.artemis.domain.Lecture;
+import de.tum.in.www1.artemis.domain.ProgrammingExercise;
+import de.tum.in.www1.artemis.domain.ProgrammingSubmission;
 import de.tum.in.www1.artemis.domain.Result;
 import de.tum.in.www1.artemis.domain.Submission;
 import de.tum.in.www1.artemis.domain.TextExercise;
@@ -37,35 +44,39 @@ import de.tum.in.www1.artemis.domain.competency.Competency;
 import de.tum.in.www1.artemis.domain.competency.CompetencyProgress;
 import de.tum.in.www1.artemis.domain.competency.CompetencyRelation;
 import de.tum.in.www1.artemis.domain.competency.CompetencyTaxonomy;
+import de.tum.in.www1.artemis.domain.competency.CourseCompetency;
+import de.tum.in.www1.artemis.domain.competency.Prerequisite;
 import de.tum.in.www1.artemis.domain.competency.RelationType;
+import de.tum.in.www1.artemis.domain.enumeration.DifficultyLevel;
 import de.tum.in.www1.artemis.domain.enumeration.ExerciseMode;
 import de.tum.in.www1.artemis.domain.enumeration.IncludedInOverallScore;
 import de.tum.in.www1.artemis.domain.enumeration.SubmissionType;
+import de.tum.in.www1.artemis.domain.lecture.AttachmentUnit;
 import de.tum.in.www1.artemis.domain.lecture.ExerciseUnit;
 import de.tum.in.www1.artemis.domain.lecture.LectureUnit;
 import de.tum.in.www1.artemis.domain.lecture.TextUnit;
 import de.tum.in.www1.artemis.domain.participation.Participant;
 import de.tum.in.www1.artemis.domain.participation.StudentParticipation;
-import de.tum.in.www1.artemis.exercise.textexercise.TextExerciseFactory;
+import de.tum.in.www1.artemis.exercise.programming.ProgrammingExerciseFactory;
+import de.tum.in.www1.artemis.exercise.text.TextExerciseFactory;
 import de.tum.in.www1.artemis.participation.ParticipationFactory;
+import de.tum.in.www1.artemis.participation.ParticipationUtilService;
+import de.tum.in.www1.artemis.repository.AttachmentUnitRepository;
 import de.tum.in.www1.artemis.repository.CompetencyRelationRepository;
 import de.tum.in.www1.artemis.repository.CompetencyRepository;
-import de.tum.in.www1.artemis.repository.CourseRepository;
-import de.tum.in.www1.artemis.repository.ExerciseRepository;
 import de.tum.in.www1.artemis.repository.ExerciseUnitRepository;
 import de.tum.in.www1.artemis.repository.LectureRepository;
 import de.tum.in.www1.artemis.repository.LectureUnitRepository;
-import de.tum.in.www1.artemis.repository.ResultRepository;
+import de.tum.in.www1.artemis.repository.PrerequisiteRepository;
 import de.tum.in.www1.artemis.repository.SubmissionRepository;
 import de.tum.in.www1.artemis.repository.TextUnitRepository;
-import de.tum.in.www1.artemis.repository.UserRepository;
 import de.tum.in.www1.artemis.service.LectureUnitService;
 import de.tum.in.www1.artemis.service.ParticipationService;
 import de.tum.in.www1.artemis.team.TeamUtilService;
-import de.tum.in.www1.artemis.user.UserUtilService;
 import de.tum.in.www1.artemis.util.PageableSearchUtilService;
 import de.tum.in.www1.artemis.web.rest.dto.CourseCompetencyProgressDTO;
 import de.tum.in.www1.artemis.web.rest.dto.SearchResultPageDTO;
+import de.tum.in.www1.artemis.web.rest.dto.competency.CompetencyImportResponseDTO;
 import de.tum.in.www1.artemis.web.rest.dto.competency.CompetencyRelationDTO;
 import de.tum.in.www1.artemis.web.rest.dto.competency.CompetencyWithTailRelationDTO;
 
@@ -74,28 +85,22 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
     private static final String TEST_PREFIX = "competencyintegrationtest";
 
     @Autowired
-    private CourseRepository courseRepository;
-
-    @Autowired
     private LectureRepository lectureRepository;
-
-    @Autowired
-    private ExerciseRepository exerciseRepository;
 
     @Autowired
     private ParticipationService participationService;
 
     @Autowired
-    private UserRepository userRepository;
+    private ParticipationUtilService participationUtilService;
 
     @Autowired
     private SubmissionRepository submissionRepository;
 
     @Autowired
-    private ResultRepository resultRepository;
+    private TextUnitRepository textUnitRepository;
 
     @Autowired
-    private TextUnitRepository textUnitRepository;
+    private AttachmentUnitRepository attachmentUnitRepository;
 
     @Autowired
     private ExerciseUnitRepository exerciseUnitRepository;
@@ -107,22 +112,22 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
     private CompetencyRelationRepository competencyRelationRepository;
 
     @Autowired
+    private PrerequisiteRepository prerequisiteRepository;
+
+    @Autowired
     private LectureUnitRepository lectureUnitRepository;
 
     @Autowired
     private LectureUnitService lectureUnitService;
 
     @Autowired
-    private UserUtilService userUtilService;
-
-    @Autowired
-    private CourseUtilService courseUtilService;
-
-    @Autowired
     private TeamUtilService teamUtilService;
 
     @Autowired
     private CompetencyUtilService competencyUtilService;
+
+    @Autowired
+    private PrerequisiteUtilService prerequisiteUtilService;
 
     @Autowired
     private PageableSearchUtilService pageableSearchUtilService;
@@ -133,6 +138,12 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
     @Autowired
     private LectureUtilService lectureUtilService;
 
+    @Autowired
+    private StandardizedCompetencyUtilService standardizedCompetencyUtilService;
+
+    @Autowired
+    private StudentScoreUtilService studentScoreUtilService;
+
     private Course course;
 
     private Course course2;
@@ -141,18 +152,20 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
 
     private Lecture lecture;
 
-    private Long idOfTextUnitOfLectureOne;
+    private long idOfTextUnitOfLectureOne;
 
-    private Exercise teamTextExercise;
+    private long idOfAttachmentUnitOfLectureOne;
 
-    private Exercise textExercise;
+    private TextExercise teamTextExercise;
+
+    private TextExercise textExercise;
 
     @BeforeEach
     void setupTestScenario() {
         participantScoreScheduleService.activate();
 
         ZonedDateTime pastTimestamp = ZonedDateTime.now().minusDays(5);
-        userUtilService.addUsers(TEST_PREFIX, 2, 1, 0, 1);
+        userUtilService.addUsers(TEST_PREFIX, 2, 1, 1, 1);
 
         // Add users that are not in the course
         userUtilService.createAndSaveUser(TEST_PREFIX + "student42");
@@ -164,7 +177,6 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
         course2 = courseUtilService.createCourse();
 
         competency = createCompetency(course);
-        createPrerequisiteForCourse2();
         lecture = createLecture(course);
 
         textExercise = createTextExercise(pastTimestamp, pastTimestamp, pastTimestamp, Set.of(competency), false);
@@ -192,12 +204,6 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
         return competencyRelationRepository.save(relation);
     }
 
-    private void createPrerequisiteForCourse2() {
-        // Add the first competency as a prerequisite to the other course
-        course2.addPrerequisite(competency);
-        courseRepository.save(course2);
-    }
-
     private void creatingLectureUnitsOfLecture(Competency competency) {
         // creating lecture units for lecture one
 
@@ -207,6 +213,12 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
         textUnit = textUnitRepository.save(textUnit);
         idOfTextUnitOfLectureOne = textUnit.getId();
 
+        AttachmentUnit attachmentUnit = new AttachmentUnit();
+        attachmentUnit.setName("AttachmentUnitOfLectureOne");
+        attachmentUnit.setCompetencies(Set.of(competency));
+        attachmentUnit = attachmentUnitRepository.save(attachmentUnit);
+        idOfAttachmentUnitOfLectureOne = attachmentUnit.getId();
+
         ExerciseUnit textExerciseUnit = new ExerciseUnit();
         textExerciseUnit.setExercise(textExercise);
         exerciseUnitRepository.save(textExerciseUnit);
@@ -215,7 +227,7 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
         teamTextExerciseUnit.setExercise(teamTextExercise);
         exerciseUnitRepository.save(teamTextExerciseUnit);
 
-        for (LectureUnit lectureUnit : List.of(textUnit, textExerciseUnit, teamTextExerciseUnit)) {
+        for (LectureUnit lectureUnit : List.of(textUnit, attachmentUnit, textExerciseUnit, teamTextExerciseUnit)) {
             lecture.addLectureUnit(lectureUnit);
         }
 
@@ -231,10 +243,10 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
         return lecture;
     }
 
-    private TextExercise createTextExercise(ZonedDateTime pastTimestamp, ZonedDateTime futureTimestamp, ZonedDateTime futureFutureTimestamp, Set<Competency> competencies,
+    private TextExercise createTextExercise(ZonedDateTime releaseDate, ZonedDateTime dueDate, ZonedDateTime assassmentDueDate, Set<Competency> competencies,
             boolean isTeamExercise) {
         // creating text exercise with Result
-        TextExercise textExercise = TextExerciseFactory.generateTextExercise(pastTimestamp, futureTimestamp, futureFutureTimestamp, course);
+        TextExercise textExercise = TextExerciseFactory.generateTextExercise(releaseDate, dueDate, assassmentDueDate, course);
 
         if (isTeamExercise) {
             textExercise.setMode(ExerciseMode.TEAM);
@@ -243,28 +255,52 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
         textExercise.setMaxPoints(10.0);
         textExercise.setBonusPoints(0.0);
         textExercise.setCompetencies(competencies);
-        exerciseRepository.save(textExercise);
 
-        return textExercise;
+        return exerciseRepository.save(textExercise);
     }
 
-    private void createTextExerciseParticipationSubmissionAndResult(Exercise exercise, Participant participant, Double pointsOfExercise, Double bonusPointsOfExercise,
+    private ProgrammingExercise createProgrammingExercise(int i, Set<Competency> competencies) {
+        ProgrammingExercise programmingExercise = ProgrammingExerciseFactory.generateProgrammingExercise(null, null, course);
+
+        programmingExercise.setMaxPoints(i * 10.0);
+        programmingExercise.setCompetencies(competencies);
+        programmingExercise.setDifficulty(i == 1 ? DifficultyLevel.EASY : i == 2 ? DifficultyLevel.MEDIUM : DifficultyLevel.HARD);
+
+        return programmingExerciseRepository.save(programmingExercise);
+    }
+
+    private Result createTextExerciseParticipationSubmissionAndResult(TextExercise exercise, Participant participant, double pointsOfExercise, double bonusPointsOfExercise,
             long scoreAwarded, boolean rated) {
+        StudentParticipation studentParticipation = participationService.startExercise(exercise, participant, false);
+        return createExerciseParticipationSubmissionAndResult(exercise, studentParticipation, participant, pointsOfExercise, bonusPointsOfExercise, scoreAwarded, rated,
+                TextSubmission::new, 1);
+    }
+
+    private Result createProgrammingExerciseParticipationSubmissionAndResult(ProgrammingExercise exercise, Participant participant, long scoreAwarded, boolean rated,
+            int numberOfSubmissions) {
+        StudentParticipation studentParticipation = participationUtilService.createAndSaveParticipationForExercise(exercise, participant.getParticipantIdentifier());
+        return createExerciseParticipationSubmissionAndResult(exercise, studentParticipation, participant, exercise.getMaxPoints(), 0, scoreAwarded, rated,
+                ProgrammingSubmission::new, numberOfSubmissions);
+    }
+
+    private Result createExerciseParticipationSubmissionAndResult(Exercise exercise, StudentParticipation studentParticipation, Participant participant, double pointsOfExercise,
+            double bonusPointsOfExercise, long scoreAwarded, boolean rated, Producer<Submission> submissionConstructor, int numberOfSubmissions) {
         if (!exercise.getMaxPoints().equals(pointsOfExercise)) {
             exercise.setMaxPoints(pointsOfExercise);
         }
         if (!exercise.getBonusPoints().equals(bonusPointsOfExercise)) {
             exercise.setBonusPoints(bonusPointsOfExercise);
         }
-        exercise = exerciseRepository.save(exercise);
+        exerciseRepository.save(exercise);
 
-        StudentParticipation studentParticipation = participationService.startExercise(exercise, participant, false);
+        Submission submission = null;
 
-        Submission submission = new TextSubmission();
-
-        submission.setType(SubmissionType.MANUAL);
-        submission.setParticipation(studentParticipation);
-        submission = submissionRepository.save(submission);
+        for (int i = 0; i < numberOfSubmissions; i++) {
+            submission = submissionConstructor.call();
+            submission.setType(SubmissionType.MANUAL);
+            submission.setParticipation(studentParticipation);
+            submission = submissionRepository.save(submission);
+        }
 
         // result
         Result result = ParticipationFactory.generateResult(rated, scoreAwarded);
@@ -275,6 +311,8 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
         submission.addResult(result);
         result.setSubmission(submission);
         submissionRepository.save(submission);
+
+        return result;
     }
 
     @Nested
@@ -283,6 +321,7 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
         private void testAllPreAuthorizeEditor() throws Exception {
             request.get("/api/competencies/for-import", HttpStatus.FORBIDDEN, SearchResultPageDTO.class);
             request.post("/api/courses/" + course.getId() + "/competencies/import/bulk", Collections.emptyList(), HttpStatus.FORBIDDEN);
+            request.post("/api/courses/" + course.getId() + "/competencies/import-standardized", Collections.emptyList(), HttpStatus.FORBIDDEN);
         }
 
         private void testAllPreAuthorizeInstructor() throws Exception {
@@ -294,9 +333,6 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
             // import
             request.post("/api/courses/" + course.getId() + "/competencies/import-all/1", null, HttpStatus.FORBIDDEN);
             request.post("/api/courses/" + course.getId() + "/competencies/import", competency, HttpStatus.FORBIDDEN);
-            // prerequisites
-            request.post("/api/courses/" + course.getId() + "/prerequisites/1", null, HttpStatus.FORBIDDEN);
-            request.delete("/api/courses/" + course.getId() + "/prerequisites/1", HttpStatus.FORBIDDEN);
             // relations
             request.post("/api/courses/" + course.getId() + "/competencies/relations", new CompetencyRelation(), HttpStatus.FORBIDDEN);
             request.getSet("/api/courses/" + course.getId() + "/competencies/relations", HttpStatus.FORBIDDEN, CompetencyRelationDTO.class);
@@ -355,12 +391,11 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
         @Test
         @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
         void testShouldOnlySendUserSpecificData() throws Exception {
-
             User student1 = userUtilService.getUserByLogin(TEST_PREFIX + "student1");
-            competencyProgressUtilService.createCompetencyProgress(competency, student1, 0, 0);
+            competencyProgressUtilService.createCompetencyProgress(competency, student1, 0, 1);
 
             User student2 = userUtilService.getUserByLogin(TEST_PREFIX + "student2");
-            competencyProgressUtilService.createCompetencyProgress(competency, student2, 1, 1);
+            competencyProgressUtilService.createCompetencyProgress(competency, student2, 10, 1);
 
             final var textUnit = textUnitRepository.findById(idOfTextUnitOfLectureOne).get();
             lectureUtilService.completeLectureUnitForUser(textUnit, student2);
@@ -396,7 +431,7 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
         void shouldReturnCompetenciesForStudentOfCourse() throws Exception {
             TextUnit unreleasedLectureUnit = new TextUnit();
             unreleasedLectureUnit.setName("TextUnitOfLectureOne");
-            unreleasedLectureUnit.setReleaseDate(ZonedDateTime.now().plus(5, ChronoUnit.DAYS));
+            unreleasedLectureUnit.setReleaseDate(ZonedDateTime.now().plusDays(5));
             unreleasedLectureUnit = textUnitRepository.save(unreleasedLectureUnit);
             lecture.addLectureUnit(unreleasedLectureUnit);
             lectureRepository.save(lecture);
@@ -452,9 +487,17 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
 
     @Test
     @WithMockUser(username = "admin", roles = "ADMIN")
-    void deleteCourseShouldAlsoDeleteCompetency() throws Exception {
+    void deleteCourseShouldAlsoDeleteCompetencyAndRelations() throws Exception {
+        Competency competency2 = createCompetency(course);
+        CompetencyRelation relation = createRelation(competency, competency2, RelationType.EXTENDS);
+        Prerequisite prerequisite = prerequisiteUtilService.createPrerequisite(course);
+
         request.delete("/api/admin/courses/" + course.getId(), HttpStatus.OK);
-        request.get("/api/courses/" + course.getId() + "/competencies/" + competency.getId(), HttpStatus.NOT_FOUND, Competency.class);
+
+        assertThat(competencyRepository.existsById(competency.getId())).isFalse();
+        assertThat(competencyRepository.existsById(competency2.getId())).isFalse();
+        assertThat(competencyRelationRepository.existsById(relation.getId())).isFalse();
+        assertThat(prerequisiteRepository.existsById(prerequisite.getId())).isFalse();
     }
 
     @Nested
@@ -569,7 +612,7 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
     void deleteLectureUnitShouldUpdateCompetency() throws Exception {
         request.delete("/api/lectures/" + lecture.getId() + "/lecture-units/" + idOfTextUnitOfLectureOne, HttpStatus.OK);
         Competency competency = request.get("/api/courses/" + course.getId() + "/competencies/" + this.competency.getId(), HttpStatus.OK, Competency.class);
-        assertThat(competency.getLectureUnits()).isEmpty();
+        assertThat(competency.getLectureUnits()).map(LectureUnit::getId).containsExactly(idOfAttachmentUnitOfLectureOne);
     }
 
     @Nested
@@ -616,28 +659,68 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
         }
     }
 
-    @Test
-    @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
-    void getCompetencyStudentProgressShouldReturnProgress() throws Exception {
-        User student1 = userRepository.findOneByLogin(TEST_PREFIX + "student1").orElseThrow();
-        lectureUnitService.setLectureUnitCompletion(textUnitRepository.findById(idOfTextUnitOfLectureOne).orElseThrow(), student1, true);
+    @Nested
+    class GetCompetencyStudentProgress {
 
-        createTextExerciseParticipationSubmissionAndResult(textExercise, student1, 10.0, 0.0, 90, true);  // will be ignored in favor of last submission from team
-        createTextExerciseParticipationSubmissionAndResult(textExercise, student1, 10.0, 0.0, 85, false);
+        private ProgrammingExercise[] programmingExercises;
 
-        await().until(() -> participantScoreScheduleService.isIdle());
+        @BeforeEach
+        void setupTestScenario() {
+            programmingExercises = IntStream.range(1, 4).mapToObj(i -> createProgrammingExercise(i, Set.of(competency))).toArray(ProgrammingExercise[]::new);
+        }
 
-        CompetencyProgress studentCompetencyProgress1 = request.get("/api/courses/" + course.getId() + "/competencies/" + competency.getId() + "/student-progress?refresh=true",
-                HttpStatus.OK, CompetencyProgress.class);
+        @Test
+        @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
+        void getCompetencyStudentProgressShouldReturnProgress() throws Exception {
+            User student1 = userRepository.findOneByLogin(TEST_PREFIX + "student1").orElseThrow();
+            lectureUnitService.setLectureUnitCompletion(textUnitRepository.findById(idOfTextUnitOfLectureOne).orElseThrow(), student1, true);
 
-        assertThat(studentCompetencyProgress1.getProgress()).isEqualTo(66.7);
-        assertThat(studentCompetencyProgress1.getConfidence()).isEqualTo(85.0);
+            createTextExerciseParticipationSubmissionAndResult(textExercise, student1, 10.0, 0.0, 90, true);
+            createTextExerciseParticipationSubmissionAndResult(textExercise, student1, 10.0, 0.0, 85, false);
 
-        CompetencyProgress studentCompetencyProgress2 = request.get("/api/courses/" + course.getId() + "/competencies/" + competency.getId() + "/student-progress?refresh=false",
-                HttpStatus.OK, CompetencyProgress.class);
+            await().until(() -> participantScoreScheduleService.isIdle());
 
-        assertThat(studentCompetencyProgress2.getProgress()).isEqualTo(66.7);
-        assertThat(studentCompetencyProgress2.getConfidence()).isEqualTo(85.0);
+            CompetencyProgress studentCompetencyProgress1 = request.get("/api/courses/" + course.getId() + "/competencies/" + competency.getId() + "/student-progress?refresh=true",
+                    HttpStatus.OK, CompetencyProgress.class);
+
+            assertThat(studentCompetencyProgress1.getProgress()).isEqualTo(22);
+            assertThat(studentCompetencyProgress1.getConfidence()).isEqualTo(0.75);
+
+            lectureUnitService.setLectureUnitCompletion(attachmentUnitRepository.findById(idOfAttachmentUnitOfLectureOne).orElseThrow(), student1, true);
+
+            CompetencyProgress studentCompetencyProgress2 = request
+                    .get("/api/courses/" + course.getId() + "/competencies/" + competency.getId() + "/student-progress?refresh=false", HttpStatus.OK, CompetencyProgress.class);
+
+            assertThat(studentCompetencyProgress2.getProgress()).isEqualTo(22);
+            assertThat(studentCompetencyProgress2.getConfidence()).isEqualTo(0.75);
+        }
+
+        @Test
+        @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
+        void getCompetencyStudentProgressMultipleExercises() throws Exception {
+            // The scheduling for all results interferes with the competency progress calculation, since only one per second is allowed
+            // Therefore creating the participant scores manually
+            participantScoreScheduleService.shutdown();
+
+            User student1 = userRepository.findOneByLogin(TEST_PREFIX + "student1").orElseThrow();
+            Result textResult = createTextExerciseParticipationSubmissionAndResult(textExercise, student1, textExercise.getMaxPoints(), 0.0, 90, true);
+            Result programming1Result = createProgrammingExerciseParticipationSubmissionAndResult(programmingExercises[0], student1, 85, true, 10);
+            Result programming2Result = createProgrammingExerciseParticipationSubmissionAndResult(programmingExercises[1], student1, 75, false, 1);
+            Result programming3Result = createProgrammingExerciseParticipationSubmissionAndResult(programmingExercises[2], student1, 95, false, 1);
+
+            studentScoreUtilService.createStudentScore(textExercise, student1, textResult);
+            studentScoreUtilService.createStudentScore(programmingExercises[0], student1, programming1Result);
+            studentScoreUtilService.createStudentScore(programmingExercises[1], student1, programming2Result);
+            studentScoreUtilService.createStudentScore(programmingExercises[2], student1, programming3Result);
+
+            CompetencyProgress studentCompetencyProgress = request.get("/api/courses/" + course.getId() + "/competencies/" + competency.getId() + "/student-progress?refresh=true",
+                    HttpStatus.OK, CompetencyProgress.class);
+
+            // No lecture units are completed and no participation in team exercise
+            assertThat(studentCompetencyProgress.getProgress()).isEqualTo(54);
+            // Slightly more points in an easy exercise but solved one programming exercise quickly
+            assertThat(studentCompetencyProgress.getConfidence()).isCloseTo(1.328, within(0.001));
+        }
     }
 
     @Nested
@@ -773,98 +856,6 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
     }
 
     @Nested
-    class GetCompetencies {
-
-        @Test
-        @WithMockUser(username = TEST_PREFIX + "instructor42", roles = "INSTRUCTOR")
-        void shouldNotGetResultsFromCoursesForInstructorNotInCourses() throws Exception {
-            final var search = pageableSearchUtilService.configureSearch("");
-            final var result = request.getSearchResult("/api/competencies", HttpStatus.OK, Competency.class, pageableSearchUtilService.searchMapping(search));
-            assertThat(result.getResultsOnPage()).isNullOrEmpty();
-        }
-
-        @Test
-        @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
-        void shouldGetResultsFromCoursesForInstructor() throws Exception {
-            final var search = pageableSearchUtilService.configureSearch(competency.getTitle());
-            final var result = request.getSearchResult("/api/competencies", HttpStatus.OK, Competency.class, pageableSearchUtilService.searchMapping(search));
-            assertThat(result.getResultsOnPage()).hasSize(1);
-        }
-
-        @Test
-        @WithMockUser(username = "admin", roles = "ADMIN")
-        void shouldGetResultsFromAllCoursesForAdmin() throws Exception {
-            final var search = pageableSearchUtilService.configureSearch(competency.getTitle());
-            final var result = request.getSearchResult("/api/competencies", HttpStatus.OK, Competency.class, pageableSearchUtilService.searchMapping(search));
-            assertThat(result.getResultsOnPage()).hasSize(1);
-        }
-    }
-
-    @Test
-    @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
-    void getPrerequisitesShouldReturnPrerequisites() throws Exception {
-        List<Competency> prerequisites = request.getList("/api/courses/" + course2.getId() + "/prerequisites", HttpStatus.OK, Competency.class);
-        assertThat(prerequisites).containsExactly(competency);
-    }
-
-    @Nested
-    class AddPrerequisite {
-
-        @Test
-        @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
-        void shouldAddPrerequisite() throws Exception {
-            Competency competency = new Competency();
-            competency.setTitle("CompetencyTwo");
-            competency.setDescription("This is an example competency");
-            competency.setCourse(course2);
-            competency = competencyRepository.save(competency);
-
-            Competency prerequisite = request.postWithResponseBody("/api/courses/" + course.getId() + "/prerequisites/" + competency.getId(), competency, Competency.class,
-                    HttpStatus.OK);
-
-            assertThat(prerequisite).isNotNull();
-            assertThat(prerequisite.getConsecutiveCourses()).contains(course);
-        }
-
-        @Test
-        @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
-        void shouldNotAddPrerequisiteWhenAlreadyCompetencyInCourse() throws Exception {
-            // Test that a competency of a course can not be a prerequisite to the same course
-            request.postWithResponseBody("/api/courses/" + course.getId() + "/prerequisites/" + competency.getId(), competency, Competency.class, HttpStatus.BAD_REQUEST);
-        }
-    }
-
-    @Nested
-    class RemovePrerequisite {
-
-        @Test
-        @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
-        void shouldRemovePrerequisite() throws Exception {
-            request.delete("/api/courses/" + course2.getId() + "/prerequisites/" + competency.getId(), HttpStatus.OK);
-            Course course = courseRepository.findWithEagerCompetenciesById(course2.getId()).orElseThrow();
-            assertThat(course.getPrerequisites()).doesNotContain(competency);
-        }
-
-        @Test
-        @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
-        void shouldReturnBadRequestWhenPrerequisiteNotExists() throws Exception {
-            request.delete("/api/courses/" + course.getId() + "/prerequisites/" + competency.getId(), HttpStatus.BAD_REQUEST);
-        }
-
-        @Test
-        @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
-        void shouldNotRemovePrerequisiteOfAnotherCourse() throws Exception {
-            Course anotherCourse = courseUtilService.createCourse();
-            anotherCourse.addPrerequisite(competency);
-            anotherCourse = courseRepository.save(anotherCourse);
-
-            request.delete("/api/courses/" + course2.getId() + "/prerequisites/" + competency.getId(), HttpStatus.OK);
-            anotherCourse = courseRepository.findWithEagerCompetenciesById(anotherCourse.getId()).orElseThrow();
-            assertThat(anotherCourse.getPrerequisites()).contains(competency);
-        }
-    }
-
-    @Nested
     class CreateCompetencies {
 
         @Test
@@ -944,11 +935,15 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
                     CompetencyWithTailRelationDTO.class, HttpStatus.CREATED);
 
             assertThat(competencyDTOList).hasSize(2);
-            // competency 2 should be the tail of one relation
-            assertThat(competencyDTOList.get(0).tailRelations()).isNull();
-            assertThat(competencyDTOList.get(1).tailRelations()).hasSize(1);
+            // assert that only one of the DTOs has the relation connected
+            if (competencyDTOList.getFirst().tailRelations() == null) {
+                assertThat(competencyDTOList.get(1).tailRelations()).hasSize(1);
+            }
+            else {
+                assertThat(competencyDTOList.get(1).tailRelations()).isNull();
+            }
 
-            competencyDTOList = request.postListWithResponseBody("/api/courses/" + course.getId() + "/competencies/import-all/" + course3.getId(), null,
+            competencyDTOList = request.postListWithResponseBody("/api/courses/" + course.getId() + "/competencies/import-all/" + course3.getId() + "?importRelations=false", null,
                     CompetencyWithTailRelationDTO.class, HttpStatus.CREATED);
             assertThat(competencyDTOList).hasSize(2);
             // relations should be empty when not importing them
@@ -966,6 +961,45 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
         @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
         void shouldReturnBadRequestForImportFromSameCourse() throws Exception {
             request.post("/api/courses/" + course.getId() + "/competencies/import-all/" + course.getId(), null, HttpStatus.BAD_REQUEST);
+        }
+    }
+
+    @Nested
+    class ImportStandardizedCompetencies {
+
+        @Test
+        @WithMockUser(username = TEST_PREFIX + "editor1", roles = "EDITOR")
+        void shouldImportCompetencies() throws Exception {
+            var knowledgeArea = standardizedCompetencyUtilService.saveKnowledgeArea("KnowledgeArea 1", "KA1", "", null);
+            var competency1 = standardizedCompetencyUtilService.saveStandardizedCompetency("Competency1", "description 1", CompetencyTaxonomy.ANALYZE, "1.3.1", knowledgeArea,
+                    null);
+            var competency2 = standardizedCompetencyUtilService.saveStandardizedCompetency("Competency2", "description 2", CompetencyTaxonomy.CREATE, "1.0.0", knowledgeArea, null);
+
+            var idList = List.of(competency1.getId(), competency2.getId());
+
+            var actualCompetencies = request.postListWithResponseBody("/api/courses/" + course.getId() + "/competencies/import-standardized", idList,
+                    CompetencyImportResponseDTO.class, HttpStatus.CREATED);
+
+            assertThat(actualCompetencies).hasSize(2);
+            var actualCompetency1 = actualCompetencies.getFirst();
+            var actualCompetency2 = actualCompetencies.get(1);
+            if (!competency1.getId().equals(actualCompetency1.linkedStandardizedCompetencyId())) {
+                var tempCompetency = actualCompetency1;
+                actualCompetency1 = actualCompetency2;
+                actualCompetency2 = tempCompetency;
+            }
+
+            assertThat(actualCompetency1).usingRecursiveComparison().comparingOnlyFields("title", "description", "taxonomy").isEqualTo(competency1);
+            assertThat(actualCompetency1.linkedStandardizedCompetencyId()).isEqualTo(competency1.getId());
+            assertThat(actualCompetency2).usingRecursiveComparison().comparingOnlyFields("title", "description", "taxonomy").isEqualTo(competency2);
+            assertThat(actualCompetency2.linkedStandardizedCompetencyId()).isEqualTo(competency2.getId());
+        }
+
+        @Test
+        @WithMockUser(username = TEST_PREFIX + "editor1", roles = "EDITOR")
+        void shouldReturnNotFoundForNotExistingIds() throws Exception {
+            var idList = List.of(-1000, -1001);
+            request.post("/api/courses/" + course.getId() + "/competencies/import-standardized", idList, HttpStatus.NOT_FOUND);
         }
     }
 
@@ -1039,6 +1073,24 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
             final var search = pageableSearchUtilService.configureCompetencySearch(competency.getTitle(), "", "", "");
             final var result = request.getSearchResult("/api/competencies/for-import", HttpStatus.OK, Competency.class, pageableSearchUtilService.searchMapping(search));
             assertThat(result.getResultsOnPage()).hasSize(1);
+        }
+    }
+
+    @Nested
+    class GetCourseCompetencyTitles {
+
+        @Test
+        @WithMockUser(username = TEST_PREFIX + "editor1", roles = "EDITOR")
+        void shouldGetCourseCompetencyTitles() throws Exception {
+            competencyUtilService.createCompetencies(course, 5);
+            var competencyTitles = competencyRepository.findAllForCourse(course.getId()).stream().map(CourseCompetency::getTitle).toList();
+            prerequisiteUtilService.createPrerequisites(course, 5);
+            var prerequisiteTitles = prerequisiteRepository.findAllByCourseIdOrderById(course.getId()).stream().map(CourseCompetency::getTitle).toList();
+            var expectedTitles = Stream.concat(competencyTitles.stream(), prerequisiteTitles.stream()).toList();
+
+            final var actualTitles = request.getList("/api/courses/" + course.getId() + "/competencies/titles", HttpStatus.OK, String.class);
+
+            assertThat(actualTitles).containsAll(expectedTitles);
         }
     }
 }
