@@ -24,19 +24,18 @@ import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.util.LinkedMultiValueMap;
 
 import de.tum.in.www1.artemis.AbstractSpringIntegrationIndependentTest;
-import de.tum.in.www1.artemis.course.CourseUtilService;
 import de.tum.in.www1.artemis.domain.Course;
 import de.tum.in.www1.artemis.domain.User;
 import de.tum.in.www1.artemis.domain.enumeration.CourseInformationSharingConfiguration;
 import de.tum.in.www1.artemis.domain.enumeration.SortingOrder;
-import de.tum.in.www1.artemis.domain.metis.*;
+import de.tum.in.www1.artemis.domain.metis.AnswerPost;
+import de.tum.in.www1.artemis.domain.metis.Post;
+import de.tum.in.www1.artemis.domain.metis.PostSortCriterion;
+import de.tum.in.www1.artemis.domain.metis.Reaction;
 import de.tum.in.www1.artemis.post.ConversationUtilService;
-import de.tum.in.www1.artemis.repository.CourseRepository;
-import de.tum.in.www1.artemis.repository.UserRepository;
 import de.tum.in.www1.artemis.repository.metis.ConversationMessageRepository;
 import de.tum.in.www1.artemis.repository.metis.PostRepository;
 import de.tum.in.www1.artemis.repository.metis.ReactionRepository;
-import de.tum.in.www1.artemis.user.UserUtilService;
 
 class ReactionIntegrationTest extends AbstractSpringIntegrationIndependentTest {
 
@@ -52,19 +51,7 @@ class ReactionIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     private ConversationMessageRepository conversationMessageRepository;
 
     @Autowired
-    private UserRepository userRepository;
-
-    @Autowired
-    private UserUtilService userUtilService;
-
-    @Autowired
-    private CourseUtilService courseUtilService;
-
-    @Autowired
     private ConversationUtilService conversationUtilService;
-
-    @Autowired
-    private CourseRepository courseRepository;
 
     private List<Post> existingPostsWithAnswers;
 
@@ -121,7 +108,7 @@ class ReactionIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
     void testCreateOwnPostReaction(CourseInformationSharingConfiguration courseInformationSharingConfiguration, boolean shouldBeAllowed) throws Exception {
         // student 1 is the author of the post and reacts on this post
-        Post postReactedOn = existingPostsWithAnswers.get(0);
+        Post postReactedOn = existingPostsWithAnswers.getFirst();
         Reaction reactionToSaveOnPost = createReactionOnPost(postReactedOn);
 
         course.setCourseInformationSharingConfiguration(courseInformationSharingConfiguration);
@@ -141,7 +128,7 @@ class ReactionIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
     void testCreateVoteReaction() throws Exception {
         // student 1 is the author of the post and reacts on this post
-        Post postReactedOn = existingPostsWithAnswers.get(0);
+        Post postReactedOn = existingPostsWithAnswers.getFirst();
         Reaction reactionToSaveOnPost = createVoteReactionOnPost(postReactedOn, null);
 
         Reaction createdReaction = request.postWithResponseBody("/api/courses/" + courseId + "/postings/reactions", reactionToSaveOnPost, Reaction.class, HttpStatus.CREATED);
@@ -157,7 +144,7 @@ class ReactionIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     void testCreateOwnPostReactionOnAnotherUsersConversationMessage(CourseInformationSharingConfiguration courseInformationSharingConfiguration, boolean shouldBeAllowed)
             throws Exception {
         // tutor1 is the author of the message and tutor2 reacts on this post
-        Post messageReactedOn = existingConversationPosts.get(0);
+        Post messageReactedOn = existingConversationPosts.getFirst();
         Reaction reactionToSaveOnMessage = createReactionOnPost(messageReactedOn);
 
         course.setCourseInformationSharingConfiguration(courseInformationSharingConfiguration);
@@ -190,7 +177,7 @@ class ReactionIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
     void testCreateMultipleOwnPostReaction_internalServerError() throws Exception {
         // student 1 is the author of the post and reacts on this post
-        Post postReactedOn = existingPostsWithAnswers.get(0);
+        Post postReactedOn = existingPostsWithAnswers.getFirst();
         Reaction reactionToSaveOnPost = createReactionOnPost(postReactedOn);
 
         Reaction createdReaction = request.postWithResponseBody("/api/courses/" + courseId + "/postings/reactions", reactionToSaveOnPost, Reaction.class, HttpStatus.CREATED);
@@ -207,7 +194,7 @@ class ReactionIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
     void testCreateOwnAnswerPostReaction(CourseInformationSharingConfiguration courseInformationSharingConfiguration, boolean shouldBeAllowed) throws Exception {
         // student 1 is the author of the answer post and reacts on this answer post
-        AnswerPost answerPostReactedOn = existingAnswerPosts.get(0);
+        AnswerPost answerPostReactedOn = existingAnswerPosts.getFirst();
         Reaction reactionToSaveOnAnswerPost = createReactionOnAnswerPost(answerPostReactedOn);
 
         course.setCourseInformationSharingConfiguration(courseInformationSharingConfiguration);
@@ -227,7 +214,7 @@ class ReactionIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
     void testCreateMultipleOwnAnswerPostReaction_internalServerError() throws Exception {
         // student 1 is the author of the answer post and reacts on this answer post
-        AnswerPost answerPostReactedOn = existingAnswerPosts.get(0);
+        AnswerPost answerPostReactedOn = existingAnswerPosts.getFirst();
         Reaction reactionToSaveOnAnswerPost = createReactionOnAnswerPost(answerPostReactedOn);
 
         Reaction createdReaction = request.postWithResponseBody("/api/courses/" + courseId + "/postings/reactions", reactionToSaveOnAnswerPost, Reaction.class, HttpStatus.CREATED);
@@ -243,7 +230,7 @@ class ReactionIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     @WithMockUser(username = TEST_PREFIX + "student2", roles = "USER")
     void testCreatePostReactions() throws Exception {
         // student 1 is the author of the post and student 2 reacts on this post
-        AnswerPost answerPostReactedOn = existingAnswerPosts.get(0);
+        AnswerPost answerPostReactedOn = existingAnswerPosts.getFirst();
         Reaction reactionToSaveOnAnswerPost = createReactionOnAnswerPost(answerPostReactedOn);
 
         Reaction createdFirstReaction = request.postWithResponseBody("/api/courses/" + courseId + "/postings/reactions", reactionToSaveOnAnswerPost, Reaction.class,
@@ -266,7 +253,7 @@ class ReactionIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     @WithMockUser(username = TEST_PREFIX + "student2", roles = "USER")
     void testCreateAnswerPostReactions() throws Exception {
         // student 1 is the author of the answer post and student 2 reacts on this answer post
-        AnswerPost answerPostReactedOn = existingAnswerPosts.get(0);
+        AnswerPost answerPostReactedOn = existingAnswerPosts.getFirst();
         Reaction reactionToSaveOnAnswerPost = createReactionOnAnswerPost(answerPostReactedOn);
 
         Reaction createdFirstReaction = request.postWithResponseBody("/api/courses/" + courseId + "/postings/reactions", reactionToSaveOnAnswerPost, Reaction.class,
@@ -289,7 +276,7 @@ class ReactionIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
     void testCreateExistingReaction_badRequest() throws Exception {
         // student 1 is the author of the answer post and reacts on this answer post
-        AnswerPost answerPostReactedOn = existingAnswerPosts.get(0);
+        AnswerPost answerPostReactedOn = existingAnswerPosts.getFirst();
         Reaction reactionToSaveOnAnswerPost = createReactionOnAnswerPost(answerPostReactedOn);
 
         Reaction createdReaction = request.postWithResponseBody("/api/courses/" + courseId + "/postings/reactions", reactionToSaveOnAnswerPost, Reaction.class, HttpStatus.CREATED);
@@ -320,7 +307,7 @@ class ReactionIntegrationTest extends AbstractSpringIntegrationIndependentTest {
         User student2 = userUtilService.getUserByLogin(TEST_PREFIX + "student2");
 
         // student 1 is the author of the post and reacts on this post
-        Post postReactedOn = existingPostsWithAnswers.get(0);
+        Post postReactedOn = existingPostsWithAnswers.getFirst();
         createVoteReactionOnPost(postReactedOn, student1);
 
         Post postReactedOn2 = existingPostsWithAnswers.get(1);
@@ -357,7 +344,7 @@ class ReactionIntegrationTest extends AbstractSpringIntegrationIndependentTest {
         User student1 = userUtilService.getUserByLogin(TEST_PREFIX + "student1");
         User student2 = userUtilService.getUserByLogin(TEST_PREFIX + "student2");
 
-        Post postReactedOn = existingPostsWithAnswers.get(0);
+        Post postReactedOn = existingPostsWithAnswers.getFirst();
         createVoteReactionOnPost(postReactedOn, student1);
         createVoteReactionOnPost(postReactedOn, student2);
 
@@ -392,7 +379,7 @@ class ReactionIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
     void testDeleteOwnPostReaction(CourseInformationSharingConfiguration courseInformationSharingConfiguration, boolean shouldBeAllowed) throws Exception {
         // student 1 is the author of the post and reacts on this post
-        Post postReactedOn = existingPostsWithAnswers.get(0);
+        Post postReactedOn = existingPostsWithAnswers.getFirst();
         Reaction reactionToSaveOnPost = createReactionOnPost(postReactedOn);
 
         Reaction reactionToBeDeleted = request.postWithResponseBody("/api/courses/" + courseId + "/postings/reactions", reactionToSaveOnPost, Reaction.class, HttpStatus.CREATED);
@@ -416,7 +403,7 @@ class ReactionIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
     void testDeleteOwnVoteReaction() throws Exception {
         // student 1 is the author of the post and reacts on this post
-        Post postReactedOn = existingPostsWithAnswers.get(0);
+        Post postReactedOn = existingPostsWithAnswers.getFirst();
         Reaction reactionToSaveOnPost = createVoteReactionOnPost(postReactedOn, null);
 
         Reaction reactionToBeDeleted = request.postWithResponseBody("/api/courses/" + courseId + "/postings/reactions", reactionToSaveOnPost, Reaction.class, HttpStatus.CREATED);
@@ -437,7 +424,7 @@ class ReactionIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
     void testDeleteOwnAnswerPostReaction(CourseInformationSharingConfiguration courseInformationSharingConfiguration, boolean shouldBeAllowed) throws Exception {
         // student 1 is the author of the post and reacts on this post
-        AnswerPost answerPostReactedOn = existingAnswerPosts.get(0);
+        AnswerPost answerPostReactedOn = existingAnswerPosts.getFirst();
         Reaction reactionToSaveOnPost = createReactionOnAnswerPost(answerPostReactedOn);
 
         Reaction reactionToBeDeleted = request.postWithResponseBody("/api/courses/" + courseId + "/postings/reactions", reactionToSaveOnPost, Reaction.class, HttpStatus.CREATED);
@@ -460,7 +447,7 @@ class ReactionIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
     void testDeletePostReactionOfOthers_forbidden() throws Exception {
         // student 1 is the author of the post and student 2 reacts on this post
-        Post postReactedOn = existingPostsWithAnswers.get(0);
+        Post postReactedOn = existingPostsWithAnswers.getFirst();
         Reaction reactionSaveOnPost = saveReactionOfOtherUserOnPost(postReactedOn, TEST_PREFIX);
 
         // student 1 wants to delete the reaction of student 2
@@ -472,7 +459,7 @@ class ReactionIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     @WithMockUser(username = TEST_PREFIX + "student2", roles = "USER")
     void testDeletePostReactionWithWrongCourseId_badRequest() throws Exception {
         Course dummyCourse = courseUtilService.createCourse();
-        Post postToReactOn = existingPostsWithAnswers.get(0);
+        Post postToReactOn = existingPostsWithAnswers.getFirst();
         Reaction reactionToSaveOnPost = createReactionOnPost(postToReactOn);
 
         request.delete("/api/courses/" + dummyCourse.getCourseIcon() + "/postings/reactions/" + reactionToSaveOnPost.getId(), HttpStatus.BAD_REQUEST);
@@ -483,7 +470,7 @@ class ReactionIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     @WithMockUser(username = TEST_PREFIX + "student2", roles = "USER")
     void testDeletePostReaction() throws Exception {
         // student 1 is the author of the post and student 2 reacts on this post
-        Post postReactedOn = existingPostsWithAnswers.get(0);
+        Post postReactedOn = existingPostsWithAnswers.getFirst();
         Reaction reactionToSaveOnPost = createReactionOnPost(postReactedOn);
 
         Reaction reactionToBeDeleted = request.postWithResponseBody("/api/courses/" + courseId + "/postings/reactions", reactionToSaveOnPost, Reaction.class, HttpStatus.CREATED);
@@ -514,8 +501,8 @@ class ReactionIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     private Reaction createInvalidReaction() {
         Reaction reaction = new Reaction();
         reaction.setEmojiId("smiley");
-        reaction.setPost(existingPostsWithAnswers.get(0));
-        reaction.setAnswerPost(existingAnswerPosts.get(0));
+        reaction.setPost(existingPostsWithAnswers.getFirst());
+        reaction.setAnswerPost(existingAnswerPosts.getFirst());
         return reaction;
     }
 
@@ -555,6 +542,6 @@ class ReactionIntegrationTest extends AbstractSpringIntegrationIndependentTest {
 
     private static List<Arguments> courseConfigurationProvider() {
         return List.of(Arguments.of(CourseInformationSharingConfiguration.DISABLED, false), Arguments.of(CourseInformationSharingConfiguration.COMMUNICATION_AND_MESSAGING, true),
-                Arguments.of(CourseInformationSharingConfiguration.COMMUNICATION_ONLY, true), Arguments.of(CourseInformationSharingConfiguration.MESSAGING_ONLY, true));
+                Arguments.of(CourseInformationSharingConfiguration.COMMUNICATION_ONLY, true));
     }
 }
