@@ -35,12 +35,10 @@ import de.tum.in.www1.artemis.domain.competency.LearningPath;
 import de.tum.in.www1.artemis.domain.competency.RelationType;
 import de.tum.in.www1.artemis.domain.enumeration.DifficultyLevel;
 import de.tum.in.www1.artemis.domain.lecture.LectureUnit;
-import de.tum.in.www1.artemis.exercise.programmingexercise.ProgrammingExerciseUtilService;
+import de.tum.in.www1.artemis.exercise.programming.ProgrammingExerciseUtilService;
 import de.tum.in.www1.artemis.lecture.LectureUtilService;
 import de.tum.in.www1.artemis.repository.CompetencyRepository;
-import de.tum.in.www1.artemis.repository.CourseRepository;
 import de.tum.in.www1.artemis.repository.ExerciseRepository;
-import de.tum.in.www1.artemis.repository.LearningPathRepository;
 import de.tum.in.www1.artemis.security.SecurityUtils;
 import de.tum.in.www1.artemis.service.learningpath.LearningPathNgxService;
 import de.tum.in.www1.artemis.service.learningpath.LearningPathRecommendationService;
@@ -67,9 +65,6 @@ class LearningPathServiceTest extends AbstractSpringIntegrationIndependentTest {
     private UserUtilService userUtilService;
 
     @Autowired
-    private CourseRepository courseRepository;
-
-    @Autowired
     private CompetencyUtilService competencyUtilService;
 
     @Autowired
@@ -77,9 +72,6 @@ class LearningPathServiceTest extends AbstractSpringIntegrationIndependentTest {
 
     @Autowired
     private ProgrammingExerciseUtilService programmingExerciseUtilService;
-
-    @Autowired
-    private LearningPathRepository learningPathRepository;
 
     @Autowired
     private CompetencyRepository competencyRepository;
@@ -324,7 +316,7 @@ class LearningPathServiceTest extends AbstractSpringIntegrationIndependentTest {
         @BeforeEach
         void setup() {
             final var users = userUtilService.addUsers(TEST_PREFIX, 1, 0, 0, 0);
-            user = users.get(0);
+            user = users.getFirst();
             course = CourseFactory.generateCourse(null, ZonedDateTime.now().minusDays(8), ZonedDateTime.now().minusDays(8), new HashSet<>(), TEST_PREFIX + "tumuser",
                     TEST_PREFIX + "tutor", TEST_PREFIX + "editor", TEST_PREFIX + "instructor");
             course = courseRepository.save(course);
@@ -373,7 +365,7 @@ class LearningPathServiceTest extends AbstractSpringIntegrationIndependentTest {
         @BeforeEach
         void setup() {
             final var users = userUtilService.addUsers(TEST_PREFIX, 1, 0, 0, 0);
-            user = users.get(0);
+            user = users.getFirst();
             course = CourseFactory.generateCourse(null, ZonedDateTime.now().minusDays(8), ZonedDateTime.now().minusDays(8), new HashSet<>(), TEST_PREFIX + "tumuser",
                     TEST_PREFIX + "tutor", TEST_PREFIX + "editor", TEST_PREFIX + "instructor");
             course = courseRepository.save(course);
@@ -478,8 +470,8 @@ class LearningPathServiceTest extends AbstractSpringIntegrationIndependentTest {
             competency2.setMasteryThreshold(100);
             competency2 = competencyRepository.save(competency2);
 
-            competencyProgressUtilService.createCompetencyProgress(competency1, user, 30, 30);
-            competencyProgressUtilService.createCompetencyProgress(competency2, user, 10, 10);
+            competencyProgressUtilService.createCompetencyProgress(competency1, user, 30, 1.1);
+            competencyProgressUtilService.createCompetencyProgress(competency2, user, 10, 0.9);
 
             var sourceNodeId = LearningPathNgxService.getCompetencyEndNodeId(competency1.getId());
             var targetNodeId = LearningPathNgxService.getCompetencyStartNodeId(competency2.getId());
@@ -490,7 +482,7 @@ class LearningPathServiceTest extends AbstractSpringIntegrationIndependentTest {
 
         private void masterCompetencies(Competency... competencies) {
             for (var competency : competencies) {
-                competencyProgressUtilService.createCompetencyProgress(competency, user, 100, 100);
+                competencyProgressUtilService.createCompetencyProgress(competency, user, 100, 1);
             }
         }
     }
@@ -513,7 +505,7 @@ class LearningPathServiceTest extends AbstractSpringIntegrationIndependentTest {
         @BeforeEach
         void setup() {
             final var users = userUtilService.addUsers(TEST_PREFIX, 1, 0, 0, 0);
-            user = users.get(0);
+            user = users.getFirst();
             course = CourseFactory.generateCourse(null, ZonedDateTime.now().minusDays(8), ZonedDateTime.now().minusDays(8), new HashSet<>(), TEST_PREFIX + "tumuser",
                     TEST_PREFIX + "tutor", TEST_PREFIX + "editor", TEST_PREFIX + "instructor");
             course = courseRepository.save(course);
@@ -521,7 +513,7 @@ class LearningPathServiceTest extends AbstractSpringIntegrationIndependentTest {
             lecture = lectureUtilService.createLecture(course, ZonedDateTime.now());
 
             competency = competencyUtilService.createCompetency(course);
-            competency.setMasteryThreshold(90);
+            competency.setMasteryThreshold(100);
             competency = competencyRepository.save(competency);
             expectedNodes = new HashSet<>(getExpectedNodesOfEmptyCompetency(competency));
             expectedEdges = new HashSet<>();
@@ -578,11 +570,11 @@ class LearningPathServiceTest extends AbstractSpringIntegrationIndependentTest {
 
         @Test
         void testRecommendCorrectAmountOfLearningObjects() {
-            competency.setMasteryThreshold(55);
+            competency.setMasteryThreshold(40);
             competency = competencyRepository.save(competency);
 
             generateLectureUnits(1);
-            generateExercises(10);
+            generateExercises(9);
             exercises[0].setDifficulty(DifficultyLevel.EASY);
             exercises[1].setDifficulty(DifficultyLevel.MEDIUM);
             exercises[2].setDifficulty(DifficultyLevel.HARD);
